高校編第一話

--- a/metastable3/1-01.html
+++ b/metastable3/1-01.html
@@ -15,7 +15,6 @@
   <div class="contents">
 
 <div class="text">
-
 　――３
 
 　さん、すりー、みっつ。
@@ -48,11 +47,110 @@
 （…………）
 　女の子が去ってからも藤白はしばらくその場に立ち尽くしていた。残ったのは真っ赤な夕焼けの空と学校全体を包み込む緩慢な静寂。威勢のいい運動部の掛け声と吹奏楽部の奏でる金管楽器の音色が風に乗って運ばれてくる。
 　ふぅ、と一つため息。
-　ようやく息ができるようになった気がした藤白は今まで女の子の座っていたところへと視線を移し、舐めるように足元を見渡す。だがそこにあるのは何ら変哲のない、土埃にまみれた赤黒い鋼鉄製のステップだけ。忘れ物でもしてくれていれば追いかける口実にもなったのだが、現実はそんなに上手くいかなかった。
-「はあ、何やってんだか」
-　先ほどまで女の子の居た場所に座って鉄格子越しの空を眺めてみる。夕焼けの空に、女の子の顔が頭に浮かんだ。明るい色のくせっ毛と負けん気だけは人一倍強そうな顔つき、そして瞳に浮かんだ涙。
-「あの子、何で泣いてたんだろうな……」
- オレンジの綿雲が早足に空を駆け抜けていった。
+　ようやく息ができるようになった気がした藤白は今まで女の子の座っていたところへと視線を移し、舐めるように足元を見渡す。そこにあるのは何ら変哲のない、土埃にまみれた赤黒い鋼鉄製のステップ――
+「あ」
+　その踊り場の上に、ひとつの人民帽がちょこんと置かれていた。
+　藤白は慌ててその人民帽の元へと駆け寄ると、手にとってそれをまじまじと眺めてみた。カーキ色のくったりとした布地と、そこに縫い付けられた赤い星形の鋲。間違いなくこの学校の制帽である。あの女の子のものだろうか？
+　そう考えて背後を振り返るも女の子の姿は既に無く、ただ蜂蜜のように凝った夕焼けの光が赤茶けた階段を照らしていた。
+　どうしよう？
+　忘れ物として職員室にでも届けようか。そんな言葉が頭をよぎると同時に、さっきの女の子の姿が藤白の脳裏をかすめる。明るい色のくせっ毛と負けん気だけは人一倍強そうな顔つき、そして瞳に浮かんだ涙――
+「よし」
+　そして藤白は帽子を左手に持ち替えると、そのまま屋上へ通じる階段を下り始める。あの女の子の後を追いかけよう。そう思った。
+　カン、カン、カン、と音を立てながら歩くたびに、藤白のなかに何か焦りのような気持ちが芽生える。そして藤白が地上に降り立つ頃には、その足取りは駆け足に変わっていた。
+　はぁはぁ、と息をつきながら夕日の中をかき分けていく藤白。あの女の子がどちらへ行ったのかは分からないけれど、そのまま帰路に付いたのだとするならばまだ十分に間に合う。
+　目指すは校門。吹奏楽部の奏でる間延びした響きを横目に、ノックの練習をする野球部の横を突っ切る。グラウンドの隅に植えられた花壇をひとっ飛びし、校門まであと十数メートルといったところまで差し掛かったとき。
+（いた……！）
+　見覚えのある後ろ姿が、藤白の目に留まった。だが……
+「…………」
+　だが、何と言って声をかけよう？
+　よくよく考えれば馬鹿らしいことである。藤白は今、彼女に忘れ物を届けようとしているだけなのだ。悩むことなど何一つない。しかし今の藤白には『これ、忘れ物だよ』と言って声をかけることが、声を掛けて別れて、そのまま何事も無く他人に戻ることが、どうしてもできなかった。
+（くそっ……俺は何をやってるんだ）
+　そうこうしている内にも女の子はどんどん歩みを進め、ついには校門の外へと出てしまう。一方の藤白は何も言えず、女の子の後を付けることしか出来ない。
+　藤白が校門を出ると、目の前には少し背の高いマンションと曲がりくねった下り坂が見えた。いつもの通学路、見知った真揺ニュータウンの景色である。女の子は背後の藤白に全く気付いていない様子で、その下り坂をひたすらに歩く。藤白も後を付けるが、女の子に掛ける言葉は一向に浮かばなかった。
+　無言で帰路を行く女の子と藤白。
+　曲がりくねった下り坂はいつしか片側一車線の道路に変わり、横目に見えていたマンションは緑の木々が生い茂る緑地に姿を変える。
+　そんな無言の尾行を五分ほど続けたときのことだった。
+　女の子がある施設の前で足を止め、唐突に周りを見渡した。藤白はその視線に思わずびくりとし、持っていた人民帽を思わず後ろ手に隠す。
+（なっ、なんで帽子を隠すんだ俺は……！）
+　だが女の子にとって藤白は単なる風景の一部だったのだろう。その目線は藤白と交わることもなく、女の子は気を取り直したように施設の敷地内へと姿を消した。藤白は慌てて女の子の後を追い、施設の正面へと向き直る。
+　その施設は清潔感の真っ白な外壁が印象的な七階建ての建造物だった。ゲートの前には警備員が常駐し、玄関前のロータリーには多数の車が停まっている。
+（え……、こ、ここって……？）
+　そして屋上には大きく掲げられた「<span class="simplified">党立精神医疗</span>センター」の文字。
+「精神……病院……？」
+　女の子の背中が敷地の中に消えて小さくなっていく。
+（な、なんでこんなところに……）
+　立ち尽くす藤白を置き去りにするかのように、女の子の背中が小さくなっていく。やがて彼女は入り口から見える一つの建物の扉を開くと、その中の暗闇へと消えていった。
+（…………）
+　一体、彼女の身になにがあったのだろう。
+　見たところ別段病気などを持っている感じではなかった。いや、今彼女が入っていった場所は精神病院だ。その手の病気は表面上、健常者と何一つ変わらないことなど往々にしてあるのだろう。だから彼女がこの場所へ入っていったということは……多分そういうことなのだ。
+　いったい彼女は何を患っているのだろう。精神を、心を患っているとして、何が彼女をそうさせたのだろう。
+　不意に、昨日屋上で見た光景が藤白の脳裏をよぎる。風にゆれる柔らかなくせっ毛と、真っ赤な夕日に照らされてきらりと光る涙――
+「……くそっ」
+　そうつぶやき、藤白は建物の敷地へと足を踏み入れた。あのとき彼女が見せたあの涙。あの涙の理由がこの先にあるのだと思うと、このまま帰るなんて……帰って、また次に会ったとき素知らぬ顔をするだなんて藤白にはできなかった。
+　一体自分は何をやっているんだと思う。
+　流石にここから先は彼女の私生活に関わる部分だ。そんなところに土足で踏み込むだなんて正気か？　自分の中の冷静な部分が声を大にして主張する。知った事か。藤白には自分が、あの異世界で出会った女の子に対する思いが、どうしても止められなかった。
+　病院の敷地内を小走りに駆け抜け、女の子の入っていった扉の前にやってきた。そこに書かれていたのは『<span class="simplified">关系者以外立</span>ち<span class="simplified">入</span>り<span class="simplified">禁止</span>／Staff Only』の文字。だが藤白はそんなもの気にも留めない。まるで自分が部外者であることを忘れてしまったかのような堂々とした動作で扉を開き、その中の長い長い灰色の廊下へと足を踏み入れると、
+（……いた！）
+　女の子は、ちょうど突き当りの角を曲がろうとしていたところだった。藤白は走って彼女に追い付くと、そのまま、また尾行を再開することにした。廊下の曲がり角に身を隠し、息を殺してひたりひたりと女の子の後を付ける。そして女の子がある一つの扉の前で立ち止まり、そのドアノブに手を掛けたそのとき、
+「おいお前、何してんだ」
+　背後から突然声。心臓が飛び出るかと思う。
+　振り返った先に居たのは、軍服を来た壮年の男。年の頃は三十代の前半といったところか、軍人特有のもみあげを落とした短髪に、軍人らしからぬ悪ガキのような顔つき。
+「あ、い、いや、これはその……」
+　なんでこんなところに解放軍の人間が。ここは病院じゃなかったのか。だが、そんな藤白の疑問が口をついて出るより先に、
+「ここで登録してる学生じゃないよな。見覚えないし、お前、さっきから青山の後付けてたみたいだけど、一体何のつもりだ」
+「え、えっと、すいません。その……」
+「どうしたんですか？　津雲さん」
+　芯の通った声に思わず振り返ると、そこには、あの女の子が立っていた。
+「おう、青山か。いやこいつがな――」
+「あ、あのっ！」
+　突然の大声。女の子が不審そうに眉をひそめる。
+「これ、忘れ物……！」
+　藤白はそう言って手に持っていた人民帽を差し出した。女の子は一瞬、何の話をしているのか分からないといった表情を浮かべると、
+「あっ……。あんたさっきの……」
+「なんだ？　お前ら知り合いなのか？」
+「い、いや、その知り合いっていうか……」
+　その声が自分に向けられているかと思うと顔が火照ってくる。初めて聞いた彼女の声。負けん気の強うそうな目尻とふわりとしたくせっ毛。あの屋上で、あの異界で出会った少女は間違いなく今、自分の前に立っている。
+「……ふーん」
+　そんな二人の様子をじっと眺めていた軍人――津雲と呼ばれていた、はニヤリと悪ガキのような笑みを浮かべると
+「おう、ちょっとこっちこいよ」
+　そう言ってがばり、と藤白の肩に腕を回すと、そのまま近くの壁際まで連れて行く。
+「お前、名前は？」
+　その声は何故かひそひそと悪巧みをするかのように小さい。
+「ふ、藤白貴和です……けど……」
+　そんな意味不明な津雲の言動に困惑を覚えながらも質問に答える。相手に合わせる必要などないというのに、何故かこちらまでひそひそ声になってしまう。
+　「なるほど、藤白か」と津雲。彼はその名を反芻するかのように、しばし無言になると、次いで
+「お前……こいつに気があるんだろ」
+「なっ！？」
+　鼻水が出た。
+「隠さなくてもいいって。お前の様子見りゃあ一発で分かるんだよ。なるほどなあ。ちょっと気になったあの子の後を付けてこんな場所までやってきたってわけかぁ」
+「ち、違いますって！　そんなんじゃないですよ！」
+「はっはっは！　隠すな隠すな！」
+　津雲は大きな声でそう言うと、わざとらしく背中をバンバンと叩いてくる。恥ずかしさで顔から火が出そうだった。
+「あ、あの……？　結局なんなんですか」
+　一方の女の子はそんな二人の様子を訝しそうな目で眺めている。
+「いやあ実はな、こいつ、新しい精神作業従事者の候補なんだよ」
+「ああ、この人がそうなんですか。あれ？　でも私と同じ女の子だって言ってませんでしたっけ？」
+「いや、それとは別件でな。この間急に決まったんだ。そんなわけで今日はこいつにこの病院を案内してやってたわけだ」
+「え、えっと……」
+　意味がわからない、という顔を浮かべる藤白に津雲は肘打ち。目線を合わせずに「いいから話を合わせろ」とひそひそ声で告げる。
+「こいつは、藤白貴和、お前と同じ党立真揺高校に通う生徒だ。ほら、挨拶」
+「や、やあ。俺、藤白貴和って言うんだ。こ、これからよろ……しく……？」
+「あ、うんよろしく。藤白君ね。私は<ruby>青山希海<rp>《</rp><rt>あおやまのぞみ</rt><rp>》</rp></ruby>」
+「青山さんか。あっ、それでこれ」
+　そして藤白は持っていた人民帽を女の子に差し出した。一方の希海は「あ、ありがと」とぎこちなくそれを受け取る。
+「よし、じゃあ顔合わせも済んだことだし、青山は自分の業務に戻ってくれ」
+「あ、はい分かりました」
+　希海と名乗った女の子はそう答えると、まだ訝しそうな表情で藤白たちに背を向け、廊下に並んだ扉のうちの一つへと消えて行く。
+「…………」
+　ふぅ、とひとつため息。
+「上手いことごまかせたな」
+　同じく横でため息をつく津雲。
+「何なんですか一体」
+「いや、好きな子の後を付けてこんな場所にまでやってきた<ruby>幼気<rp>《</rp><rt>いたいけ</rt><rp>》</rp></ruby>な少年のことを思ってだな」
+「話が見えないんですけど……。一体なんなんですかここ？」
+「そうだな……じゃあ、話も長くなることだし、移動するか」
+　津雲はそう言ってニヤリと笑う。
+　その声は、病院の白い廊下に飲まれて静かに消えていった。
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
