--- a/metastable3/1-03.html
+++ b/metastable3/1-03.html
@@ -13,102 +13,262 @@
   <div v-component="metastable-page-header"></div>
 <div class="contents">
 <div class="text">
-　
-　放課後。
-　始業式翌日の授業なんてものはたいていがオリエンテーションみたいなもので、教師の自己紹介だとかどういう風に勉強を進めるだとかの話で授業の半分くらいが潰れてしまう。おまけに今年度から藤白の担任となった先生はいわゆる『あたり』で、授業後のホームルームが著しく短いことで有名だった。
-　そんなわけで、現在ホームルームを終えた教室の中には、一日で浪費すべきエネルギーを有り余らせた生徒達が、思い思いの放課後を胸に描きながら帰り支度をしている最中だった。
-　そしてそれは藤白も同じである。
-　急いで身支度を済ませ、一緒に帰ろうという友人の誘いを断って廊下に飛び出た。向かうは三年六組の教室。あの女の子のクラスである。藤白は大股で渡り廊下を歩くと、そのままの勢いに階段を登って３－６の前までやってきた。
-　塗りたてのワックスが光沢を放つ新学期の廊下。どのクラスもまだホームルームの最中なのか、教室の前はひっそりと静まり返っていた。藤白はそのうちの一つ扉からこっそりと中を窺ってみる。
-（げっ……そういえば紀佳もこのクラスだった）
-　真っ先に目に飛び込んできたのは見覚えのある後ろ姿。最後尾の席に座った紀佳はボケっとした顔で担任の話に耳を傾けている。だがこの小さな窓からはどんな角度で覗いてみても、お目当ての女の子の姿は見当たらない。ここからは死角になっている前の方の席なのだろうか。
-　そんなことを考えているうちにホームルームが終わり、教室内がにわかに活気づきはじめた。藤白は教室のなかを覗きこむのをやめ、腕を組んでさも誰かを待っているそぶりをする。担任と思しき教師が部屋から出てくると、ついで雪崩をうったかのように教室からぞろぞろと生徒が出てきた。その一団に探し求めている女の子の背中がないか、藤白はしばらく目を凝らして探してみた。途中紀佳が出てきたときは慌てて後ろを向いたが、それ以外はずっと注意を切らさない。
-　だがいくら待ってみてもお目当ての女の子はなかなか姿を現さない。
-（後ろ向いてる間に出て行ってしまったのか……？）
-　そんな不安が頭をよぎるが、仮にそうだとしたらもう手遅れだ。だが過ぎてしまったことを今更悔いても仕方がなく、今は女の子がまだ教室内に残っている可能性にすがるしかない。
-（ていうかもういっそのこと……）
-　自分から教室に入ってしまおうか。
-　脳裏にそんな考えが浮かぶが、よその教室に入るのはなんだか抵抗があり、ましてや話したこともない人を訪ねるのは非常に気が重い。
-　だが幸いにも今日は新学年がスタートしてまだ二日目だ。教室に慣れていないのはそこの住人も同じことであって、まだクラスの面々も覚えきれていない人だって多いだろう。そこに知らない顔が一つ増えたところで、さして怪しまれることはない。
-　そう考え、藤白は『よし』と一つ決意をして中に入ってみることにした。少し緊張した面持ちでドアに手を掛け、がらりと戸を引いて中へ入る。教室内に居たのはホウキを片手にじゃれあう男子生徒や机に腰掛けて談笑する女子生徒。そしてそれらノイズのような人混みの向こう側に――
-（……いた！）
-　探していた女の子は、窓際の一番前の席に座っていた。後ろからで顔はよく見えないが、あのふわりとした明るい髪色は、まさに彼女に違いなかった。
-「おう藤白、何してんだ？」
-　突然、背後から声。振り返るとそこには見知った男子生徒の顔があった。
-「さ、佐竹先輩……？」
-　そこに居たのは少しひょろっとした短髪の男子生徒。去年文化祭の委員で一緒になって以来懇意にしてもらっている上級生だった。
-「珍しいな、お前がこっち来るなんて。紀佳ちゃんならもう帰ったぞ？」
-「い、いや、今日は紀佳じゃなくて……」
-　藤白はそう言葉を濁すと、視線を女の子の方へやる。
-「あ、あの一番前の席に座ってる子……なんて名前なんですか？」
-「はぁ？　一番前の席っていうと……」
-　佐竹はそこまで言うと、突然がばっと藤白の肩に手を回し、そのまま廊下まで引っ張っていった。
-「おっなになに？　お前、あいつのこと気になってるわけ？」
-「ちょ、ちょっと苦しいですって！　離してください！」
-「まあまあ、いいじゃねえか。男同士の大切な話だ。周りに聞かれちゃまずいだろ」
-　別にやましい話をしているわけでは無いのだから構わないだろうと藤白は思う。というかこんな風に騒いでいる方が周りの注目を集めてしまうのでやめてほしい。
-「んで、お前はあいつの何が知りたいんだ？」
-　連れて行かれた廊下。佐竹は藤白の肩に腕を回したままの姿勢で、心底嬉しそうな表情で質問を投げかける。
-「ていうか先輩あの人のこと知ってるんですか？　まだクラス分けされて二日目ですよ」
-「あああいつ……。あいつ青山<ruby>希海<rp>《</rp><rt>のぞみ</rt><rp>》</rp></ruby>って言うんだが、青山さんとは高一の頃に同じクラスだったからな。てかお前、紀佳ちゃんがいるのにこれ以上新しい子にちょっかい掛けようとは一体どういう了見だ？　答えによっちゃ許さんぞ」
-　そう言って頭を小突いてくる佐竹。藤白は肩に回された腕ごと強引にそれを撥ねのけ、
-「ち、違いますって！　そういうのじゃないですから！　なんというか……ただ単純にちょっと気になるんですよ」
-「お前なあ……その『ちょっと気になる』が世間でなんて呼ばれてるのか知らんのか」
-　佐竹ははぁと大きくため息をつくと、少しだけ真面目な顔をして藤白に向き直り、
-「まあでも……一応忠告しておくと青山さんはあんまりおすすめしないぞ」
-「な、なんでですか」
-「あいつ男いるから」
-　どくりと、少しだけ心臓が音をたてる。
-「あいつ今でこそあんな明るい色に髪染めてるけどな、昔はもっと暗くてどよんとした雰囲気だったんだぜ？　高一の頃に男と一緒になって下校してるの目撃されてるし、まあ向こうの好みに合わせてイメチェンしたってとこだろ」
+　　肝心の希海は佐竹と話している最中に教室を出て行ってしまっていた。
+（もう、まったく、あの人と話してるとろくなことがない）
+　憎めない笑顔の佐竹を思い出しながら、精神医療センターのゲートをくぐる藤白。
+（でもまあ、気を引き締めないと）
+　そうだ、と考えを改める。自分は今から検査の合否を聞くのだ。そしてその結果が合格ならば、自分は希海と一緒に精神医療に携わることになる。あの女の子に、一歩近づくことができるのだ。
+　そして藤白は昨日そうしたように従業員用の出入り口から入り、津雲の部屋を尋ねた。
+「おう、入れ入れ」
+　ノックをすると、中から景気のいい声が聞こえた。一言、「失礼します」と付け加えて藤白は扉を開ける。
+「まあそこ座れよ」
+「あ、はい……」
+　津雲が指をさしたのは昨日も座った大きめのソファ。藤白が見ても意味が分からないであろう資料が所狭しと乱雑に置かれているこの部屋にあって唯一片付いたスペースだった。藤白が腰掛けると、津雲も向かいのソファに腰掛ける。
+「じゃあ早速昨日の検査の結果だがな……。おめでとう。合格だ」
+「よかったです」
+　冷静に答えた藤白だったが、心の中では盛大に安堵していた。
+「血中バイオン濃度も、オルゴン侵度も、<ruby>虚 想 受 容 性<rp>《</rp><rt>ネガティブ・ケイパビリティ</rt><rp>》</rp></ruby>も、合格基準を超えている。随分とギリギリだが、それ以外は特に問題は見当たらないし、大丈夫だろう」 
+「じゃあ、これで晴れて――」
+「正式な認可はまた後日だがな。まあでも普段の素行によほど問題があるとか、血縁者にテロリストや外国人がいるってことでもない限りは大丈夫さ。あとは二、三の講習を受ければ第三種精神医療従事者の資格が降りるし、ここでの活動も許される」
+　資格、と言われると少し嬉しい。就職や大学受験に役立つのかはよく分からないが、自分の脳力が目に見える形で評価されたことになるのだから。
+「まっ、お前はなんとなくスジが良さそうだったからな」
+「スジ……？　そんなちょっと会っただけで何か分かるんですか？」
+「ああ、精神医療従事者の能力は……とりわけオルゴン侵度と<ruby>虚 想 受 容 性<rp>《</rp><rt>ネガティブ・ケイパビリティ</rt><rp>》</rp></ruby>はな、お前みたいな青臭いガキの方が高いって相場が決まってんだよ」
+「あ、青臭いってなんですか？」
+「お前、青山のことを追いかけてこんな場所まで来たんだろ？　そういうのを青臭いって言わずして何て言うんだよ。知ってるか？　一度閉律症になった人間と、あと恋をしてる人間は精神医療従事者の適性が高いっていうのはこの業界じゃ常識だ」
+「だ、だから違いますって！！」
+「いーって、いーって、俺には分かってんだよ。あははは！」
+　そんな津雲の盛大な笑い声をかき消すかのように、ノックの音がした。コンコンという乾いた音が執務室に響き、二人の意識がそちらへ向けられる。
+「おう、入ってくれ」
+「失礼します――って……」
+　ドアノブががちゃりと回り、蝶番が音を立てる。部屋に入ってきた人物は、意外にも藤白がよく知る顔だった。
+「カズくん……？」
+「の、紀佳っ！？」
+　互いが互いの存在を予見していなかった藤白と紀佳は二人して素っ頓狂な声を上げる。
+「おう、お前が<ruby>古江紀佳<rp>《</rp><rt>ふるえのりか</rt><rp>》</rp></ruby>か。よく来てくれた。まあとりあえずそこに座れよ」
+　津雲に促されて紀佳は藤白の隣に腰掛ける。
+「なんでカズくんがここにいるんですか？」
+「それはこっちのセリフだって。なんで紀佳がここに」
+「この間、閉律症の治療が終わった時に、なんか案内が来たからだよ。『特定精神医療従事者募集のご案内』とかいう十ページくらいの小さい冊子。ちょっと興味あったから、それに載ってた案内窓口に昨日行ったの。そしたら色々と検査があって、今日結果を聞きに来たらここに通されたってわけ。それで、カズくんは？」
+「俺は――」
+　口を開きかけて藤白ははっとする。流石に『希海の後を付けて建物に侵入したら見つかって半ば強引に検査をさせられた』なんて言えるはずがない。
+「こいつ……藤白とはつい昨日会ったばかりなんだがな。いやちょっとスジが良さそうだったから、スカウトしてみたってとこさ」
+　どう説明したものか思案していたところに津雲が助け舟を出してくれた。
+「スジ……ですか」と紀佳。訝しむような視線で藤白を凝視するが、そんな彼女の疑念を打ち消すように津雲はパンとひとつ手を叩くと
+「よし、じゃあ人も揃ったことだし部屋を出るか。仕事仲間に会ってもらわないといけないしな」
+　そう言った津雲に案内されたのは、真っ白な廊下の一角にある小さな休憩室だった。
+「おう、青山いるか？」
+「あれ？　津雲さん、どうしたんですか」
+「いや、前に言ってただろ<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミングの話。アレの人材が内定したんだ。正式な認可はまだ先なんだが早めに紹介しておこうと思ってな。ほら、お前ら入れ」
+　津雲に急かされ、まず紀佳が部屋に入り、それに藤白が続いた。六畳くらいの大きさの部屋には机とソファが置かれており、壁に設けられた本棚には何やら難しそうな本が並んでいる。
+　そして少し緊張したような面持ちで部屋の中央に立つ希海。あの時、屋上に通じる階段の踊り場で出会った、あの少女がそこに居た。
+「あれ？　あなた確か……」
+　希海は少し混乱したような様子で藤白と紀佳を交互に見つめる。無理もない。片方はさっきまで同じ教室で授業を受けていた人物で、もう片方も前日に見た顔だったからなのだろう。
+「おう。そういや青山と古江は面識があったな。まあでもせっかくだし改めて自己紹介でもするといい、ほらじゃあまず青山から」
+「な、なんで私からなんですか」
+「だってこの業界じゃお前が先輩だろ。ほら、ぶつくさ言ってないでさっさと挨拶しろ」
+　津雲に促されて希海はしぶしぶと、それでいて少し落ち着かない様子で自己紹介を始める。
+「え、えっと。三年六組の青山希海……です。こ、これからよろしく」
+　そう言って人民帽をとり、小さく会釈する希海。もっと物静かな印象があったが、こうして実際に話しているのを前にすると案外そうでもなさそうである。
+「青山さん、よろしく。私は古江紀佳。クラス同じだし、これから仲良くしよう。そんでもってこっちは……」
+「えっと……藤白貴和だ。なんか色々あって今日からこっちにお世話になりそう。これからよろしく。あ、青山先輩」
+「えっと古江さんに藤白くん、ね。まあまだ分からなかいことも沢山あるだろうけど、何かあったら私に聞いてくれたらいいから」
+　三人がそれぞれ自己紹介を終えるのを見計らって津雲がまとめにはいる。
+「青山は高一の頃からこっちでバイトまがいのことしてたからな。今年で三年目か。まあ経験はかなりある方だと思うから、何かあったら頼るといい。じゃあ今から……そうだな。せっかくだし、さっそくルーミングやってみるか？」
+「ルーミング？」と紀佳。
+「ああ、そういや言ってなかったな。患者の精神に入ることを俺たちは『ルーミング』って言ってるんだ。まあ業界用語だな」
+「いきなり本番は流石にちょっと……」と藤白。
+「大丈夫だ。本番じゃない。ここにはルーミングの訓練施設があって、今回はそれを使った予行演習みたいなことをするだけだ。それに、お前らの<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>も早めに知っておきたいしな」
+　そして話はトントン拍子で進んだ。
+　三人は二、三の説明を受けながら廊下を歩き、そして病院内の一番奥まった場所にある部屋へと案内された。小さく重い扉を開くと、そこには窓一つ無い開けた部屋と、そこに置かれた三つのベッド。壁際にはロッカーを数段重ねにしたような計器類が所狭しと並べられており、そこからベッドに向かって何本ものケーブルが伸びていた。
+「俺は担当者を呼んでくるからこっから先は青山が説明してくれ。ルーミング予定時刻は……そうだな今から30分後くらいでいいだろ。じゃあ後は頼んだぞ」
+　津雲はそう言ってさっさと部屋の外へと出て行ってしまう。吸音フェルトがびっしり貼られた扉を閉めると、乾いた音が部屋の中に短く響いた。
+「えっと……じゃあ、そうね……」
+　その乾いた音が鳴り止むのを見計らって、希海は二人に向き直る
+「二人がルーミングに関してどこまで知っているのか分からないけど……、まあ、とりあえず、ここがルーミングをするための部屋ね。ほら、そこにベッドがあるでしょ。基本的には薬を飲んで頭と首に計器類を接続してから、あそこに寝っ転がってればいいの。あとは機械が自動的にやってくれるって寸法」
+　だがその説明を受けても、藤白にはまだ自分たちが何をするのかがピンとこなかった。
+「患者はどこに？」
+「普段なら隣の部屋に患者がいて、その患者と私達の脳がこの辺に散らばってる機械を介して繋がれるってわけ。ただ今回は――」
+「訓練って言ってたよね」と紀佳。
+「うん。今回は訓練だから、繋がる相手は本物の人間じゃなくて機械。もっと正確に言うと、私達の脳から出てくる信号を受け取って擬似的な応答を返すプログラムね。つまりコンピュータ上のシミュレーション世界に入り込むわけ」
+　まあ、説明するより実際にやってもらった方が早いかな。希海はそう言うと、計器の上に置かれた樹脂製の棚を乱暴に開くと、その中から何かを取り出した。
+「はいこれ。二人分あるから」
+　差し出された手の上に置かれていたのは、数粒の糖衣錠だった。
+「これは感覚を一時的に麻痺させるための薬。あ、ちなみに水は部屋を出て左に進んだところにウォーターサーバーがあるからそこで……って、せっかくだし一緒に行こっか。私も飲まなきゃいけないんだし」
+　そして二人は希海に案内されて廊下を歩き、ウォーターサーバーで薬を飲んだ。知らない薬を服用することに少し抵抗がある藤白だったが、希海は慣れた手つきでさっさと薬を飲んでしまい、紀佳の方も躊躇せずそれを口にした。
+　部屋に戻り、再び希海の説明を受ける。と言ってもここからの説明は大したものではなく、ベッドの頭部分から伸びる計器類を装着する方法と、その他些細な注意点くらいで特筆すべきものはない。
+「えっと……じゃあこれで準備完了なのか？」
+「肩こりそう」
+　首から何本ものワイヤーハーネスをぶら下げる紀佳の姿は、さながらエリマキトカゲかなにかのようだった。
+「あ、あと枕元にヘッドギアみたいなのがあるでしょ。それを付けたら準備完了。あとは電気消して横になってればいいだけだから。簡単でしょ？」
+　希海はそう言うと藤白たちが装着しているのと同じ、ハーネスが伸びる首輪のようなパーツを装着する。これはネック<ruby>ＳＱＵＩＤ<rp>《</rp><rt>スクイド</rt><rp>》</rp></ruby>と呼ばれジョセフソン効果を利用して脳から出る信号を読取るための装置なのだが、当の藤白たちにそんな難しい話は分かりやしない。
+「じゃ、電気消すよ。寝っ転がって静かにしててね」
+　希海はそう言うと、手に持ったリモコンを使って部屋の照明を消した。吸光フェルトに覆われた壁は一切の光を反射せず、まるで月のない田舎の夜道ように真っ暗になる。
 「…………」
-「まあ、そんなわけでだな。悪いことは言わん。諦めろ。略奪愛を良しとするなら話は別だけどな」
-「……本当に、そんなんじゃないですから」
-　佐竹と別れてからしばらく経った後も、女の子はしばらく教室からでてこなかった。ちらりと様子を窺ってみると机に向かって何か書いているようで、その作業が終わるのを待っているうちにもう十分ほどが経過してしまう。
-　やがて女の子はよし、と小さく独りごちると、書類を二つ折りにしてショルダーバッグに詰め込み、机の横にぶら下げていた人民帽をかぶって教室を出てきた。一方の藤白は感付かれないように距離を取りつつその後を付ける。階段を下り、下駄箱で靴を履き替え、そのまま校門を出た後も、ただひたすらに女の子の後を歩き続けた。
-（……さすがにこれはまずいか）
-　不意にそんなことを思う。
-　何かに突き動かされるようにこうして後を付けてしまっているわけだが、これではまるでストーカーではないか。このまま尾行を続けて一体自分はどうするのか、彼女の自宅を突き止めて、その先になにか良からぬことをする予定でもあるのか。
-　まさか、あるわけがない。さっき佐竹にも言ったが、自分は別にそういうつもりじゃない。ただあの時の涙の訳が気になって、彼女ともう一度だけ話がしたくて、こんな馬鹿馬鹿しい行動を続けているのだ。
-　だったら、自分はどうすべきなのだ？
-　決まっている。もう一度話をするのに、こんな行為は不要だ。彼女の自宅を突き止める必要なんてこれっぽっちもない。
-　やめよう。
-　藤白はそう思った。彼女が次の角を曲がったらこの馬鹿げた尾行もおしまい。そしたら自分も家路につこう。彼女とはまた後日、正々堂々と正面から話しかければいい。
-　だが、希海が次に曲がった角は、藤白の予想だにしない方向だった。
-　彼女が曲がったのは高校からほど近い道の途中。信号もなければ交差点ですらない道の中腹である。先週の嵐ですっかりその花を落としてしまった桜並木の下で、彼女はかくりと右に曲がる。そしてその先にあったものは……
-（びょ、病院……？）
-　その施設の入り口に大きく掲げられていたのは『<span class="simplified">党立精神医疗</span>センター』の文字。いわゆる精神病院だった。
-（な、なんでこんなところに……）
-　立ち尽くす藤白を置き去りにするかのように、女の子の背中が小さくなっていく。やがて彼女は入り口から見える一つの建物の扉を開くと、その中の暗闇へと消えていった。
-（…………）
-　一体、彼女の身になにがあったのだろう。
-　見たところ別段病気などを持っている感じではなかった。いや、今彼女が入っていった場所は精神病院だ。その手の病気は表面上、健常者と何一つ変わらないことなど往々にしてあるのだろう。だから彼女がこの場所へ入っていったということは……多分そういうことなのだ。
-　いったい彼女は何を患っているのだろう。精神を、心を患っているとして、何が彼女をそうさせたのだろう。
-　不意に、昨日屋上で見た光景が藤白の脳裏をよぎる。風にゆれる柔らかなくせっ毛と、真っ赤な夕日に照らされてきらりと光る涙――
-「……くそっ」
-　そうつぶやき、藤白は建物の敷地へと足を踏み入れた。あのとき希海が見せたあの涙。あの涙の理由がこの先にあるのだと思うと、このまま帰るなんて……帰って、また次に会ったとき素知らぬ顔をするだなんて藤白にはできなかった。
-　一体自分は何をやっているんだと思う。
-　流石にここから先は彼女の私生活に関わる部分だ。そんなところに土足で踏み込むだなんて正気か？　自分の中の冷静な部分が声を大にして主張する。知った事か。藤白には自分が、あの異世界で出会った女の子に対する思いが、どうしても止められなかった。
-　病院の敷地内を小走りに駆け抜け、女の子の入っていった扉の前にやってきた。そこに書かれていたのは『<span class="simplified">关系者以外立</span>ち<span class="simplified">入</span>り<span class="simplified">禁止</span>／Staff Only』の文字。だが藤白はそんなもの気にも留めない。まるで自分が部外者であることを忘れてしまったかのような堂々とした動作で扉を開き、その中の長い長い灰色の廊下へと足を踏み入れると、
-（……いた！）
-　女の子は、ちょうど突き当りの角を曲がろうとしていたところだった。藤白は走って彼女に追い付くと、そのまま、また尾行を再開することにした。廊下の曲がり角に身を隠し、息を殺してひたりひたりと女の子の後を付ける。そして女の子がある一つの扉の前で立ち止まり、そのドアノブに手を掛けたそのとき、
-「おいお前、何してんだ」
-　背後から突然声。心臓が飛び出るかと思う。
-　振り返った先に居たのは、軍服を来た壮年の男。年の頃は三十代の前半といったところか、軍人特有のもみあげを落とした短髪に、軍人らしからぬ悪ガキのような顔つき。
-「あ、い、いや、これはその……」
-　なんでこんなところに解放軍の人間が。ここは病院じゃなかったのか。だが、そんな藤白の疑問が口をついて出るより先に、
-「ここで登録してる学生じゃないよな。見覚えないし、お前、さっきから青山の後付けてたみたいだけど、一体何のつもりだ」
-「え、えっと、すいません。その……」
-「何してたかって聞いてんだよ。謝れなんて言ってない」
-　男の高圧的な詰問にたじろぐ藤白。頭のなかはもう真っ白だった。
-「えっと……その……俺はあの青山って人と昨日会ったばっかりなんですが……今日彼女のことを学校で見かけて……それでもう一度話したいなって思って……それで気付いたらこんな場所まで後を付けてしまって……それで……」
-　みるみる萎縮していく藤白とは裏腹に、黙ってその言葉を聞いていた男は呆れ顔に変わっていく。
-「はぁ？　てことはアレか。お前、青山のことが気になって、それでこんな立ち入り禁止の場所まで来てしまったってわけか？」
-「あ、はい……そういう……ことです」
-　そこまで言い切ると、男は突然声を上げて笑い出す。
-「あはははは、なんだよそれ、そんな下らないことで――ああ、いや本人にとっては下らなくないのか、あははは」
-「あ、あの……」　
-　男はひとしきり笑うと、落ちついて藤白の方へ向き直る。
-「いや、悪かった悪かった。まあでも、せっかくだしな、茶でも飲んでいけよ」
+　ベッドに寝転がった藤白は、ぼんやりとここ数日のことを考えていた。
+　ニューロワームに感染した紀佳。屋上で出会った先輩と真っ赤な夕日。ストーカーまがいの尾行の果てにこんな場所へ来てしまったこと。もう来ないと思っていた紀佳に朝起こされたこと。
+　だが、そのすべてを思い出そうとしてもそれらに実感は伴っていなかった。まるで夢の中にいるように、一切の記憶に現実感が湧かない。
+（でも夢……じゃないんだな）
+　そう、これは夢ではない。めまぐるしく移り変わる現実を思うと、藤白の心臓が少しだけ跳ねた。その正体が期待なのか不安なのかは誰にも分からない。
+　そんな風にぼんやりと考え事をしていると、次第に体の感覚が無くなってくる。薬が効いてきたのだ。
+　まず消えたのは平衡感覚。ブランコにゆられるように頭のなかがグラグラとしてくる。自分が立っているのか寝ているのか分からない。
+　次に消えたのは皮膚の感覚。ベッドから感じられる圧力が消え、まるでフワフワと宙を漂っているかのような気分に襲われる。
+　そして最後に消えたのは時間の感覚。まるで眠りに落ちる直前のように、一分一秒という感覚が曖昧になっていき、やがてそこが夢か現実かの区別すら曖昧になってくる。そして――
+
+　――カズくん
+
+　誰かが自分を呼ぶ声がする
+
+　――カズくん。起きて
+
+　この声は紀佳だ。性懲りもなくまた起こしに来たというのだろうか。もういらない、と言ったのに。
+
+「カズくん」
+
+　目を開けると、そこは見知らぬ場所だった。
+　グリッドの刻まれた真っ白な床面が地の果てまで続いているだだっ広い空間。その現実離れした大地の上には数世代前のちゃちな３Ｄモデリングかと見紛うような、濃い赤や緑をした大小様々な球形のオブジェが置かれている。
+「……あれ、ここ？」
+　目を擦って体を起こすと、そこには希海と紀佳が立っていた。
+「二人とも起きたみたいね」
+　藤白が立ち上がるのを確認すると、希海は辺りをぐるっと見渡して説明を始める。
+「ここが他者の精神空間……を模したコンピュータ上のヴァーチャル空間よ。とは言っても人間の精神を完全に模倣するのは難しいから、こんな大昔の３Ｄゲームみたいな感じになっちゃってるんだけどさ。本物はもっともっとリアルだからその辺は注意しといてね」
+　希海はそう言ってぼりぼりと頭をかきむしる。
+「じゃあ、早速だけどお二人さん……。何かこう……自分の内側からもくもくと湧き上がってくるような感覚はない？」
+「……え、えっとそれはどういう」
+　希海の言っている言葉の意味が理解できず藤白は紀佳と顔を見合わせる。
+「ここは精神空間。いわば夢の中なの。だから現実の物理法則から逸脱した形の様々な現象が起こりうるわ。例えば、見ただけで物が燃やせたり、触れただけで石ころを真っ二つに割れたり……」
+　そして希海は自らの横に置いてあった赤い楕円形のオブジェをちらりと見た。すると次の瞬間、そのオブジェがひとりでに宙に浮き上がり、希海の周囲をくるくると回り始める。
+「こんな風に手に触れず物を動かせたり」
+「……なっ！？」
+「これが<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>って言われるもので、特定精神医療従事者なら誰でも持ってる能力……ていうかこれを持ってる人が特定精神医療従事者に選ばれるんだけどね」
+　希海が空き缶を後ろに投げるような動作をすると、宙に浮いていたオブジェがそれに呼応するように向こう側へ飛んでいく。
+「とにかく、二人とも適正アリって判断された以上は何かしらの能力があるかと思うんだけど……どうかな」
+　藤白は困ったように紀佳の方を見たが、一方の紀佳は何かを考え込むかのように俯いたまま視線を上げようとしない。
+「どうって言われても……。特に何もないぞ俺……」
+「えっ？　そ、そんなことはないと思うんだけどな……。私のときはちゃんとそういう感覚あったし……。ていうかこればっかりは個々人の問題だから私が何かを教えられるようなものじゃないのよね……。どうしよう……」
+　助けを求めるようにそんな希海を見つめる藤白。だが次の瞬間、藤白の脳裏に一つの<ruby>描像<rp>《</rp><rt>イメージ</rt><rp>》</rp></ruby>が浮かんだ。
+　自らの右手から伸びていく細い細い、今にも千切れてしまいそうな一本の糸。その糸は希海の左手にするりと絡まると、何かを伝えるようにぶるぶると振動を始める。
+「――！？　そうだ、先輩！」
+「えっ、な、なに？」
+　これだ、と思った藤白は、そのイメージが消えてしまわないようにと急いで希海のそばへ駆け寄る。
+「ちょ、ちょっと俺の手を握ってくれないか！？」
+「えっ！？　手、手って！？」
+　少し顔を赤らめて戸惑う希海。その反応を見て、藤白はようやく自分のいった言葉の意味を理解した。
+「……あっ、い、いや、その嫌ならいいんだけど」
+　これではどさくさに紛れて体に触れようとしているようではないか。つい先日やってしまったストーカーまがいの尾行が脳裏をよぎり、自分が変態かなにかになってしまったような感覚が藤白を襲う。
+　だが希海は恥ずかしそうに俯くと、無言で、その手を藤白の手に重ねてきた。小さくてすらっとした綺麗な手から、自分ではない他者の温度が伝わってくる。その柔らかさと温かさに、藤白はどきりとした。
+「に、握ったよ。それで……？」
+　しばらくの間ぼけっと肌の温かさを感じていた藤白は、希海のその言葉にはっとした。
+「あ、ご、ごめん。多分もういい……と思う」
+　藤白は自分から手を引っ込めると、精神を集中し、希海の目をじっと見つめる。そして希海が気まずそうに視線を逸らした次の瞬間。
+『先輩、聞こえるか』
+　藤白は口に出さずに、頭のなかでそう言った。
+「――へ？」
+　一瞬きょとんと、間抜けな表情を浮かべる希海。
+『先輩、聞こえるか？　聞こえてたら返事してくれ』
+「な、なにこれ！？　頭のなかに藤白くんの声が響く！」
+　希海は混乱した面持ちで自分の頭に手を乗せて叫ぶ。その様子に、一部始終を見ていた紀佳が怪訝そうに眉をひそめた。
+「……どういうこと？」
+「あ、頭、頭のなかで藤白くんの声が聞こえるの！　すごい！　これってテレパシー！？　藤白くん、こんなことができるんだ！」
+　上手くいったみたいだ。多分、これが自分の能力なのだと藤白は思う。不思議な感覚だ。今の今までそんな超能力じみた力など持っていなかったというのに、あの糸が伸びるイメージを見て以降、今では昔からできたかのように自然なものとしてそれを受け入れることができる。
+「いや、多分これだけじゃない。先輩、次は先輩が頭のなかで何かを考えてくれ」
+「えっ……それって？」
+「何でもいい。ただ強く、強く念じてくれた方がこっちとしても“受信”しやすいと思う」
+「え、えーっと……じゃあ……」
+　希海はそう言うとぐっと拳を握りしめ、目を閉じて食いしばるように念じ始める。何もそこまで力まなくてもいい気がしたが、邪魔をしてはいけないと思って藤白は何も言わない。
+『あーあーあー、テスト。テスト』
+　次の瞬間、頭の中に希海の声が響いてきた。藤白はメッセージを受け取ったことを伝えるために、希海の念じた内容をオウム返しで口にする。
+「あーあーあー、テスト。テスト……か？」
+「す、すごい。合ってる！　合ってるよ！」
+　答え合わせが上手く行ったことを確認した藤白は、少しだけ得意な気分になる。
+「と、まあ、こんな感じだな。俺の、その<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>ってヤツは。一度触れた人と言葉を交わさずにメッセージをやりとりできる……らしい」
+「へぇ、カズくんそんなことできるんだ。でもさ、考えたことがそのまま伝わるなら、教えたくないことまで伝わっちゃうんじゃ」
+　それまで黙っていた紀佳が割って入る。
+「えっ！？　ちょ、ちょっとやめてよ藤白くん。わ、私にだって知られたくないことくらい」
+「ところで青山さん」
+「な、なに？」
+「今までで一番恥ずかしい経験は何ですか」
+「やめんかボケっ！　ああああああもうやだやだ！　絶対教えないからね！　あーあーあーあーあーあーあー！！」
+「ま、まあ大丈夫だと思うぞ。こうして普通に会話してても、何も頭に聞こえてこないし、意識して強く念じない限りは俺の言葉も、先輩の言葉も互いに聞こえないんだと思う」
+「そ、そう……。だ、だったらいいんだけど……」
+　落ち着きを取り戻した希海はこほん、とひとつ咳払いをすると藤白の方へ向き直り。
+「じゃあ、さっそく、実践練習でもしてみる？」
+「実践練習？」
+「うん。実際に患者の治療にあたる時は、患者が『帰りたくない』って言いだしたときは、無理やり連れて帰らないといけないわけじゃない？　てかそういうときにこういう能力を使って……まあ、いわば力づくで連れて帰るわけだけどさ。でも殆どの場合、相手も同じようにこういう超能力じみたことができるの。だからこの場合の実践練習っていうのは模擬戦のことなんだけど……」
+　希海はそう言って、三歩ほど後ろへと下がって藤白と距離を取る。
+「まあでも藤白くんの能力はちょっと戦うのに向いてない気はするわね。どうする？　何なら実践練習ナシってことでもいいけど」
+　藤白は考える。確かに自分の能力は相手の口に出さずして相手に言葉を伝える力だ。これを使ってどうやって戦えというのだろう。でも自分は先輩よりも一回り以上体が大きいし、スポーツだって苦手ではない。そんな自分が女の子を前にして尻込みをするのはちょっと格好悪いし、何よりそんな姿を希海に見せたくはなかった。
+「いや、いいぜ。やってやる。体格差だってあるんだし、能力の差はちょうどいいハンデだろ」
+　だから藤白はそう強がってみせる。何、希海の能力はつい先程見せてもらったばかりではないか。物体を触れずして動かせるくらい何だというのだ。少しばかり手が長くなった程度だと思えばいい。
+「そう？　じゃあやってみよっか。ルールは簡単。藤白くんと私が左腕に着けてるその腕章。それに先に触れた方が勝ち。ただしハンデとして……」
+　希海はそう言うと、キュイと音を立てて足元の平坦な大地を靴でこする。
+「私はここから後ろに下がらない。じゃ、はい。今からスタート」
+　そのあまりにのんきな様子に藤白は戸惑いを覚える。いくらなんでもハンデが大きすぎないだろうか。実践と言ってもルールを聞けばいわばケンカみたいなもので、今も昔もケンカに一番有利な<ruby>要因<rp>《</rp><rt>ファクター</rt><rp>》</rp></ruby>は体格だ。見たところ希海の身長は１６０センチと少し。一方の藤白は１８０代の前半である。体重や筋肉量だって大きな差があるだろう。能力以前にそんな明らかな差があるのに、まだこれ以上ハンデを着けようという希海の気がしれなかった。
+「どうしたの？　もう始まってるよ？」
+「いや、さすがにちょっとそれはハンデでかすぎないか……？」
+　そうこぼした藤白に対して希海は意地悪そうな笑みを浮かべると、
+　――ごん
+　次の瞬間、藤白の後頭部に鈍い痛みが走った。
+「痛ってえ！？」
+　頭をさすりながら振り返ると、どこからともなく飛んできた円盤状のオブジェがくるくると宙を舞っていた。
+「ほらほら。ちょっと体大きいからって、あんまりなめてもらったら困るわよ？　私こういうのは慣れてるんだから」
+「く、くそ……」
+「だからね。本気で来てくれていいわよ。それこそ殴ったり蹴ったりするつもりでも全然平気だから」
+　なるほど。そういうことなら遠慮はやめようと藤白は思う。とりあえず相手のリーチの長さが厄介だ。とくると、まずすべきことは――
+　そして藤白は希海に向かって一直線に駈け出した。相手の力がどれほど遠くまで及ぶのかは分からないが、近づいてしまえば希海の能力の最大の長所である射程距離が全然活かせなくなってしまうだろう。だが、
+「甘い」
+「うわっ！？」
+　どこからともなく飛んできた棒状のオブジェが藤白の足元に転がされ、それを踏んづけてしまった藤白はあえなくその場にすっ転んでしまう。
+「ち、ちくしょう……って、ぐえっ！」
+　立ち上がろうとした藤白の背中に、ダメ押しとばかりに楕円状のオブジェが炸裂する。波状攻撃を受け地面に這いつくばっていた藤白。希海はそんな藤白の元へと優雅に歩いて行き、その腕章にちょこんと指先で触れると
+「はい、私の勝ち」
+　そう言ってにっこりと微笑むのだった。
+
+　その後、何度も挑戦してみたが、藤白が希海に勝てることはついになかった。
+　不意打ちでスタートダッシュを決めるもあえなくすっ転ばされるし、足元に注意して走ったら今度は上からオブジェが落ちてくる。左右に跳んで避けようとするも横から別のものが飛来するし、距離を取って後ろに退けば正確無比な遠投に追い打ちされる。
+「も……もう無理。まいった」
+　そして藤白は音を上げてその場に倒れこんだ。
+「よろしい」
+　希海はその様子を見て満足したかのように、うん、とうなずいてみせる。あ、この人結構サドっ毛あるな、と藤白は思った。
+　真っ白な地面に横たわり、ただ無心に上空を眺める。そこにはグリッドの引かれた真っ白な天井がどこまでも続いていて、しばし凝視しているとどちらが地面でどちらが天井なのかがだんだん分からなくなってくる。
+「先輩は……いつもこんなことやってんのか」
+「まあね。中には素直に出てきてくれる患者もいるけど、十中八九何かしらの争いになるかな。じゃあ次は……」
+　そして希海は紀佳の方に向き直り
+「古江さんの番ね」
+　そう静かに告げるのだった。
+「えっ？　紀佳もやるのか……？」
+「うん、そりゃね。ていうかそのために今日はこんな場所まで来てもらったわけだし」
+「いや、でも紀佳は……」
+　紀佳は運動が大の苦手である。
+　小さい頃から体育の成績はいつもビリだったし、一緒に登校するときだって、どんなに遅刻しそうでも紀佳の足の遅さを鑑みて藤白は絶対に走ることをしなかった。ひとたび自分が走り出すと、次振り返ったときにはもう半径数十メートルの範囲に紀佳の姿はなく、息を切らしながら遥か後ろを走る米粒のようなサイズの少女を確認することができる。そんなレベルの運動音痴だ。
+　だから藤白には紀佳にこんな荒事ができるとは思えなかったのだが、事情を知らない希海はまた話が別である。同じクラスとはいえ、まだろくにクラスメイトの顔も覚えていないであろう新学期二日目でにしてその運動音痴具合を認知するのは無理があると思われる。ここは自分が少し説明しておいたほうがいい。そう思ってその場から立ち上がった藤白だったが、
+「私は……もう準備できてるよ」
+　当の紀佳は希海をまっすぐに見据え、そう静かに言い放つのだった。そのセリフに『へぇ』と関心した表情を浮かべる希海。
+「あ、じゃあ能力に関してはちょっと伏せとこっか。実戦だと互いに何も分からない状態からその……戦いが始まるわけじゃない？　せっかくだしいきなり模擬戦やってみようよ。まあ古江さんには私の能力もう見せちゃったけど、それはハンデってことで」
+「うん、私はそれでいい」
+「じゃあルールは藤白くんとやったときと一緒ってことで、はいスタート」
+「お、おい紀佳――」
+　お前、大丈夫なのか。そう割って入ろうとした藤白の言葉が最後まで出ようとした次の瞬間。
+　たん、という音。紀佳の姿が消えた。
+　いや、正確に言えば消えてはいない。紀佳は狩りをする猫のように一瞬でその場から跳躍したのだ。その事実を藤白が把握したときには紀佳はもう希海の目の前に着地をはじめていて、
+　――！！
+　不意を突かれる形になった希海は、少し遅れて紀佳の背後にあったオブジェを投げつけた。あまりに突然のことで手加減ができなかったのだろう。そのスピードは遊び半分でやっていた藤白のときと比較にならない。
+　だが紀佳は背後に目でも付いているかのように振り返らず、横に飛んでそれを避ける。その回避行動に反射神経が追いつかなかったのか、さっきまで紀佳のいた空間に向かって放たれたオブジェは希海自身に刃をなす一撃になってしまう。
+「しまっ――！」
+　両腕で体と顔面を守りながらオブジェに跳ね飛ばされる希海。紀佳はそんな相手の隙を見逃しはしない。さらに一跳びをして距離を詰めると、その右手を伸ばして希海の腕章を鷲掴みにしようと――
+　だが伸ばした手は目的のものに触れる寸前に引っ込められた。両脇から飛んできたオブジェを避ける形で紀佳は後ろに跳躍すると、そのまま跳ねまわるボールのように天井や床を蹴って希海から距離を取る。
+　中空でオブジェ同士が衝突する乾いた音が響き、それを合図に再び前へ跳び出す紀佳。だが希海はその動きを予想していたかのように、宙をゆく紀佳の軌道上にひときわ大きな、人の胴体ほどもあるオブジェを投げてよこした。一方の紀佳はそのオブジェを蹴ってふわりと軌道を上空に移すが、
+　それが悪手だった。
+　その直後、前後左右とおまけで斜めから、五つの異なるオブジェが紀佳を襲った。速度も軌道もばらばらな五つの砲弾。中空で身動きが取れなくなった紀佳はそれを避けられず、体をすくめて防御することしかできない。
+　そして次の瞬間、ばきり、という嫌な音を藤白は確かに聞いた。
+　「お、おい紀佳！」
+　叩き落とされた蝿のように、頭を下にしてその場に力なく落下する紀佳。右手一本で着地をして頭を守ろうとするが、上手くいかずにその場に倒れこんでしまう。
+　希海はそんな紀佳の元へ一目散に駆けていく。そしてその腕章に手を掛けようとした次の瞬間、
+　うずくまっていた紀佳の足が動いた。バネのように蹴り出された右足が<ruby>鳩尾<rp>《</rp><rt>みぞおち</rt><rp>》</rp></ruby>を直撃し、希海は数歩分後ろに跳ね飛ばされて仰向けに倒れる。よほど強烈な一撃だったのか、希海は地に横たわったまま咳込み、なかなか立ち上がろうとしない。そしてその間に紀佳は体をねじって片手で起き上がると、倒れこんでいた希海に駆け寄って馬乗りになる。
+　もはや勝負あったか。藤白の目にそう写った戦いの行方。だが紀佳は馬乗りになった状態から希海の腕章に手を伸ばし、そして――
+　止まった。
+　仰向けに倒れたままの状態から伸ばされた希海の右手。
+　その指先は紀佳よりも一瞬早く、相手の腕章に触れていた。
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
