--- a/metastable3/1-04.html
+++ b/metastable3/1-04.html
@@ -13,103 +13,67 @@
   <div v-component="metastable-page-header"></div>
 <div class="contents">
 <div class="text">
-　男に連れて行かれたのはそこからほど近い個人用の執務室だった。
-「緑茶でよかったよな？」
-　そう言って男は藤白の座っている席に湯呑みを差し出すと、自らも応接用の椅子に腰掛けた。
-「さて、じゃあまあ世間話でも……って顔じゃねーな」
-「当たり前ですよ。一体何なんですか」
-「ああ、悪い悪い。まあお前も……ってそういや名前聞いてなかったな。俺は<ruby>津雲<rp>《</rp><rt>つくも</rt><rp>》</rp></ruby>。見りゃあわかると思うが、解放軍の者だ」
-「藤白貴和です。なんで解放軍の人がこんなところに……？」
-　それが藤白の今の一番の疑問だった。自分は精神病院に来たはずなのに、どうしてこんな風に軍人と向い合って茶を飲んでいるのか。彼女は……希海は一体何のためにこんな場所へ来たのか。何から何まで分からないことだらけだった。
-「そうだな……。藤白、お前、ニューロワームって知ってるか？」
-「……名前くらいは」
-　ニューロワーム、その単語にどきりと心臓が音を立てた。
-「ニューロワームってのはな、大気中のオルゴン場を介して高等生物の人の脳から脳へと感染していく、いわゆる情報生命体なんだ。こいつに感染すると、脳機能に障害をきたして、頭がおかしくなったり、寝たきりになってしまったりするわけだ」
-　その辺りのことは藤白もなんとなくは知っている。オルゴン場がどうのとか、情報生命体がどうのとか、そういう難しそうなところは分からないが、ついこの間身近な人間に感染者が出たからだ。その人間とは……紀佳のことであるのだが。
-「んでそのニューロワームだがな。実は昨今、軍事利用の研究が各国で盛んなんだ。まずは米国が目をつけて、その後に中国も開発を始めると、火が着いたように世界中で軍事目的の研究が始まった。そしてウチの国でも世界の潮流に乗っかって、数年前から研究部門を立ち上げたわけだが、この病院はそれの臨床データを提供する場として俺たち解放軍と提携している……というわけさ」
-　なるほど、と藤白は思う。それでこんな病院に、不釣り合いな軍服姿の人間が居たのか。だが、疑問はそれだけではない。
-「じゃあ彼女もその研究に関係して……ここに来てるんですか？」
-「ん、ああ青山か？」
-　思えばここは病院といえど一般患者の出入りするような外来ではない。ここまで受付の一つと目に入らなかったし、そもそも建物の入り口に立入禁止の札が掲げられていたではないか。
-「まあそんなとこだな。」
-　津雲と名乗った男は藤白のそんな考えを肯定するようにゆっくりと頷く。
-「そのニューロワームに感染した場合なんだが……ああ、兵器としてのそれじゃなくて、自然にいるヤツだぞ？　自然のニューロワームに感染した場合、一番多く見られる症状が『眠ったままになる』っていうものだ。これは閉律症って呼ばれてるわけだが、この閉律症の治療には少しばかり特殊な資格が必要でな。その資格を持ってる青山はここの病院で治療行為をしつつ、俺たち解放軍に臨床データを提供してくれている、というわけだ」
-　なるほど。つまり彼女はなにか悪いところがあってこの精神病院に通院しているわけではなく、つまり治す方だということだ。
-「でも治すって……。医者でもない、俺と同じような高校生がそんな高度なことできるんですか？　それに治すって具体的に何をやって……？」
-「それについてはな。お前とこうして茶をしばいてる理由にも繋がる話なんだが……」
-　そうしていると、背後でドアがノックされた。コンコンという乾いた音が執務室に響き、二人の意識がそちらへ向けられる。
-「おう、入ってくれ」
-「失礼します――って……」
-　ドアノブががちゃりと回り、蝶番が音を立てる。部屋に入ってきた人物は、以外にも藤白がよく知る顔だった。
-「カズくん……？」
-「の、紀佳っ！？」
-　互いが互いの存在を予見していなかった藤白と紀佳は二人して素っ頓狂な声を上げる。
-「おう、お前が古江紀佳か。よく来てくれた。まあとりあえずそこに座れよ」
-　津雲に促されて紀佳は藤白の隣に腰掛ける。
-「なんでカズくんがここにいるんですか？」
-「それはこっちのセリフだって。なんで紀佳がここに」
-「この間、閉律症の治療が終わった時に、なんか案内が来たからだよ。『特定精神医療従事者募集のご案内』とかいう十ページくらいの小さい冊子。ちょっと興味あったから、それに載ってた案内窓口に行ったらここに通されたってわけ。それで、カズくんは？」
-「俺は――」
-　口を開きかけて藤白ははっとする。流石に『女の子の後を付けて建物に侵入したら見つかってここに連れて来られた』なんて言えるはずがない。
-「こいつ……藤白とはついさっき会ったばかりなんだがな。いやちょっとスジが良さそうだったから、スカウトしてみたってとこさ」
-　どう説明したものか思案していたところに津雲が助け舟を出してくれた。スカウト云々の部分は初耳も甚だしいがまあ、方便というやつなのだろうと藤白は納得することにする。
-「スジ……ですか」
-　紀佳は訝しむような視線で藤白を凝視するが、そんな紀佳の疑念を打ち消すように津雲はパンとひとつ手を叩くと
-「よし、じゃあ人も揃ったことだし、本題に入ろうか」
-　そう言っておもむろに話を始めるのだった。
-「今日、二人に……まあ藤白は飛び入りだが、こうして二人に集まってもらった理由は他でもない資質検査のためだ」
-「資質？」と藤白。
-「ああ、さっき説明しただろう。精神医療従事者になるための資質検査だ」
-「なっ！？　俺、初耳ですよ！？」
-「あ？　そうだったか？　まあいいだろ。費用はこっちで負担してやるんだから、検査くらいしていけよ。適正がなかったら『はいさよなら』だし、適正がありゃその時にまたどうするかじっくり考えりゃいい。それに――」
-　津雲はそこまで言うとぐいと藤白に顔を寄せ
-「青山希海に近づきたいんだろ」
-　隣の紀佳に聞こえないよう、小声でそう告げる。
-「――っ！？」
-　突然出てきたその名前に盛大にむせ返してしまう藤白。
-「はっはっはっ、若いってのはいいなあ」
-「…………？」
-　男二人のやりとりに紀佳が怪訝そうに眉をひそめた。
-
-　その後、紀佳と二人で病院内の検査室を回って採血をしたり、脳波を測ったりする。その途中、藤白は紀佳から精神医療従事者について二、三の説明を受けた。その内容はこう。
-　まず第一に、閉律症はニューロワームに感染して発症する精神の病である。閉律症を患うと精神が閉鎖状態に陥ってしまい、外見的には寝たままになってしまう。
-　第二に、その治療は患者の脳と作業者の脳を機械で繋ぎ、直接患者の精神に入り込むことによって行う。
-　この『患者の精神に入り込む』という点が曲者だ。
-　閉律症を発症してしまう直接的な原因はニューロワームによるものだが、そもそも精神状態が健全な人間は通常の免疫力によってニューロワームに感染することはほとんどない。なんらかの原因によって精神の免疫が弱った状態にあってはじめて、ニューロワームに感染してしまうのだ。つまり患者の多くは、現実世界でなんらかの問題を抱えている。
-　そして、その患者の少なくない割合の者が、閉鎖された精神世界から外へ出ることを拒絶する。自らを苛む世界で生きることよりも、心を煩わせることがない、平穏な閉じた世界で生きることを望むのだ。
-　そして第三に、このように元の世界へ帰ることを拒絶した患者をどう治療するのか。答えは簡単。力づくで、無理矢理に連れ戻すのである。
-「無理やりって……どうやって？」
-　病院の白い廊下を歩く藤白が聞いた。
-「私もまだ自分でやったことないからよく分からないけど、何か戦ったりすることもあるみたい」
-「そりゃまた物騒な話だな」
-「あ、でも結構簡単みたいだよ。患者の夢の中に入り込む感じらしいから、戦って、その結果怪我とかしちゃっても現実には何も影響はないって言われた。他人の夢の中でも振り回されずに自分の夢を展開する能力？みたいなのをこの検査で測ってるみたい」
-　そう言って紀佳は自分の検査結果が書かれたカルテに目を落とす。
-「過去に閉律症を患った人はその能力に秀でてることが多いらしくて、私に案内が来たのもそういう理由みたい」
-「なるほどな……。そういえば紀佳のときはどうだったんだ？」
-「私？」
-「ああ。紀佳が……その……閉律症になったときは、やっぱりそういうきな臭い話になったりしたのか？」
-　つい先日の出来事が藤白の脳裏に蘇る。ぐったりとしたまま目を覚まさない紀佳と、そんな紀佳を前にして右往左往する自分。あの時のことを思い出すと、藤白の言葉尻が自然と重くなっていく。
-「私は素直に帰ることにした。だから、そういう戦ったりとかはなかったかな」
-　ひょっとすると紀佳はこっちの世界に帰ってきたくなかったんじゃないか。帰ってきたくないのに、力づくで無理矢理に連れ戻されたのではないか。そんな事を考えていた藤白は、その言葉に少しだけ救われた気分になる。
-「じゃあもし俺たちがこのなんとか従事者ってヤツになったとしたら……、その時は戦ったりとか、嫌がる人を無理矢理に連れ戻したりしないといけないってわけか……」
-「うん。でも私はその辺結構割り切ってる。だって、中にはちゃんと呼びかけに応じて帰ってくれる人だっているわけだし。言葉を尽くして、それでもダメなときは、もう仕方ないと思う。それに……」
-　紀佳はそう言うと前を向き、いつもの仏頂面に戻る。
-「それに私何も部活動してないでしょ？　だから時間は沢山ある。こういうことやってたら大学入試に有利になるみたいだし、それにお金も入るらしいしね。だからちょっとやってみようかな、って思った。カズくんも、もし適正があったら一緒にやろうよ。一人より二人の方が心強いし」
-「ああ、そうだな。俺も実はちょっと興味あるんだよ。だからこの検査が上手くいけばやってみようと思ってる。それに……ちょっと気になることもあるしな」
-　そんな話をしながら病院中を歩きまわり、検査を終えた。
-　そして今、二人は再び津雲の執務室まで戻ってきている。
-「終わりました」
-「おう、早かったな。もっと時間かかるかと思ってたんだが」
-「けっこう空いてたんで、凄くスムーズでしたよ」
-　そう言って藤白と紀佳は持っていた検査表を手渡した。津雲はそれを受け取ると、指でなぞりながらそれを読み進めていく。
-「うん。古江に関しては……何も問題ないっぽいな。血中バイオン濃度も十分だし、<ruby>虚想受容性<rp>《</rp><rt>ネガティブケイパビリティ</rt><rp>》</rp></ruby>も申し分ないくらいに高い。薬物アレルギーも特にないみたいだし、いけるだろ。そんでもって藤白は……」
-　津雲はそこまで言うと、もったいぶるように言葉を詰まらせた。その仕草に、藤白の鼓動が自然と速くなっていく。
-「おめでとう。適正ありだ！　まあ各種の数値は下限ギリギリだが、それ以外は特に問題は見当たらないし、大丈夫だ」
-　やった、と。藤白は心のなかで小さくガッツポーズをした。別に精神医療従事者になりたいわけでもないが、自分にもできることがある、と言われるのは嫌ではない。
-「正式な認可はまた後日だがな。まあでも普段の素行によほど問題があるとか、血縁者にテロリストや外国人がいるってことでもない限りは大丈夫さ」
-　津雲はそこまで言い切ると、ポケットをあさって中からジャラジャラとした鍵の束を取り出してみせる。
-「じゃあとりあえず部屋出るか。仕事仲間に会っておきたいだろ？　な？」
-　その意地悪そうな視線は明らかに藤白を捉えていた。
+　時刻は夕方の六時。薄暗くなり始めた執務室には津雲と藤白が二人で向かい合っていた。
+「なるほどな」
+　津雲は藤白から報告を受けるとうん、と一つ頷き
+「つまり、お前の<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>は触れた人間と言葉を介さずに意思疎通をする能力。んで古江は身体強化ってとこか」
+　そう言って煎茶をずずとすする。ちなみに希海と紀佳は藤白より前に面談を終えてしまって、もうさっさと帰ってしまったらしい。藤白が最後の一人である。
+「いや、そんな呑気な話じゃないですよ……。ホントにびっくりしたんですから。まさかあんな物凄いケンカになるなんて……」
+　ケンカと言うと少しだけ語弊がある。さっき起こったことはあくまでも模擬戦だ。だが希海も紀佳もその表情は真剣そのもので、横で傍観していた藤白にとってはケンカも訓練もあまり大差のないように思えた。
+「確かにかなり熱は入ってたみたいだな。だが実戦だって概してあんなもんらしいぞ？　いや、らしい、っていうのは俺が実際に見たわけじゃないからこんな言葉を濁した表現になるんだが……。まあでも色んな特定精神医療従事者の話を聞く限りどれもそんな感じだ。かなり本気でドンパチやるらしい。それこそ殺し合いに近いレベルで」
+　殺し合い。その言葉を聞いて藤白は少しだけ不安に駆られる。さっきも自分は争う二人をただ見ていることしかできなかった。その前だって希海にいいように遊ばれて手も足もでなかった。そんな自分が、本当にこの業務を上手くこなせるのだろうか。
+「おいおい、何深刻そうな顔してんだ。不安にでもなったか」
+「あ、いえ……てか……はい。そうですね」
+「まあ、その不安は正しい。実際にお前の能力だとドンパチやるのは難しそうだし、一人でルーミングをやるのはかなり荷が重いだろうな。だが……」
+　津雲はそう言うと、またいつものように悪ガキのような表情を浮かべて笑う。
+「だが、安心しろ。それは去年までの話だ」
+「というと……？」
+「そういえば、お前らにはまだちゃんと話してなかったんだがな。ウチでは今年からルーミングは三人一組でやることになったんだ。まあ試験的に、っていう但し書きが付くが。えーっとどこだっけな」
+　津雲は立ち上がり、机の上に乱雑に置かれた資料の類をあれでもないこれでもないと、開き始める。
+「あった。ほらこれだ。見てみろ」
+　そう言って藤白に差し出されたのは、一枚のＡ４サイズのプリントだった。そこには何やら難しいお役所言葉が細かく書かれている。
+「えっとこれは……？」
+「ああ、お前が見てもよく分からんだろうから雰囲気だけを感じ取ってもらえたらいい。それは上からのお達しの書類だ。注目してほしいのはそのタイトル。学生精神医療従事者における四重極ルーミングなんちゃら……って書かれてるだろ？」
+　プリントの上部に目をやると確かに『<span class="simplified">学生精神医疗从事者</span>における<span class="simplified">四重极</span>ルーミングの<span class="simplified">试验的运用</span>に<span class="simplified">关</span>して』とゴシック体で書かれている。
+「この四重極ルーミングっていうのは？」
+「おう、まさにそれだ。従来のルーミングは<ruby>双極<rp>《</rp><rt>ダイポール</rt><rp>》</rp></ruby>型……つまり一人の患者と一人の作業者を繋いで治療する形式で行われていたわけだ。何でかっていうと、これが一番安定してるから。つまり患者と作業者合わせて二人になる場合が一番簡単にできるんだよ。だが患者と作業者の数が合わせて三人以上になると途端に不安定になってしまって上手いこと精神を接続できないことが実験的にも理論的にも示されていたわけだ」
+　話が途端に難しくなってしまって藤白は目を白黒させる。津雲はそんな藤白に少し呆れたようにため息をつくと
+「おいおいこれくらいはさっと理解して欲しいぞ？　つまりだなあ、今までは患者一人に対して作業者一人じゃないと上手くいかなかったんだよ。ところが最近、実験的にその例外が発見された。それが<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミング。つまり患者と作業者が合わせて四人の場合だと、不思議とこれが安定するらしい。いや厳密には安定じゃなくて<ruby>準安定数４<rp>《</rp><rt>メタステーブル・フォー</rt><rp>》</rp></ruby>なんて名前で呼ぶらしいが、俺も専門家じゃないから詳しくは知らん」
+「えっと、つまり……？」
+「つまりお前や古江をスカウトしたのはそういう理由なわけだ。今まで青山一人でやってて……、まあ昔は相方みたいなのも居たんだけどな。そいつが大学生になってやめちまって、青山一人になってたんだが……ってこの話はいいか。とにかく、これからは青山とあと二人でチームを組んでルーミングに当ってもらうことになった。お前や古江が新たに連れて来られたのはそのためだな」
+「ち、チームですか……」
+「おう。そうだ。三人一組ならお前みたいな実戦向きじゃない能力だって活用の場が出てくるだろ。遠距離に強い青山と、接近戦に強い古江。そんでもって補佐のできるお前がいればメンバーのバランスも丁度いい。俺もまさかこんなにバッチリハマるとは思ってなかったが、案外いい感じに収まるもんだな。それに――」
+　津雲はそこまで言い切ると、意地悪そうな笑みを浮かべる。
+「お前も青山と一緒のチームになれて嬉しいだろ？」
+「なっ……！」
+　不意を突かれた形になり思わず素っ頓狂な声を上げてしまった。心なしか顔が赤らんでるような気さえする。津雲はそんな藤白を茶化すかのように「若いってのはいいなあ！」などど高らかに笑い声を上げていた。
+「あ、そうだ。一つだけ注意しておくとな……」
+　それまで大笑いしていた津雲が急に真面目な顔に戻る。
+「まあここにはチーム内での恋愛が禁止だとか、『清く正しくお付き合いしましょう』だとか、そんな頭の硬いルールなんてない。だが、ただ一つだけ……これだけは絶対に守れよ。いいか……？」
+　そして津雲は藤白にずいと顔を寄せる。藤白はその真剣な様子にごくりと息を飲むと
+「精神空間内での不純異性交遊は厳禁だ」
+　むせた。
+「な、何言ってるんですか！　しませんよそんなこと！」
+「お、そうか？　でもお前ら若いしな。ルーミングは三人で行うとはいえ、どんな過ちが起こるか分からんからな」
+　仮に、もしも万が一、何か天変地異でも起こって自分と希海がそういう関係になったとしても、患者や紀佳のいる場所でそんなことするわけがない。というか所構わずそんな行為をしでかす人間だと認識されてるかと思うとかなり心外だった。
+「津雲さんは俺をどういう人間だと思ってるんですか……」
+「ああ、すまんすまん。まあでもこれだけはちゃんと言っておかなきゃいけなくてな。何故かと言うと精神空間内でそういう行為に及ぶのはかなり危険だからだ」
+「……なんで危険なんですか？」
+「ルーミングやオルゴンといったものは性欲と深い関係にあって精神空間内でオルガスムスを感じると没入の深度が大幅に上がるからだ。ていうか俺がお前をスカウトしたのも似たような理由だってのは前も言ったな？　恋をすると血中バイオン濃度や<ruby>虚想受容性<rp>《</rp><rt>ネガティブケイパビリティ</rt><rp>》</rp></ruby>が通常人よりも大幅に高まるなんて研究結果がある」
+　悲しいかな、その読みは大当たりだったということだ。だが藤白はまだ納得がいかない。自分は別に、そういう下心で希海の後をつけていた訳ではなく単にあの日の……あの涙の<ruby>理由<rp>《</rp><rt>わ　け</rt><rp>》</rp></ruby>が知りたかっただけなのだ。
+　だが現実に津雲の読みが的中して自分に精神医療従事者の適性がアリだと判断されてしまった事実は重い。自覚がないだけで、自分はやっぱりそういう理由から希海のことが気にかかってしまっているのだろうか。
+「まあ、そんなわけで今日はこの辺にしておくか。気をつけて帰るんだぞ」
+「あ、はい……。それじゃあまた」
+　藤白は適当に挨拶をして執務室を出ると、人民帽を目深にかぶり直してそのまま長い長い病院の廊下を歩き始めた。今日はじめて来た場所だったが、検査にルーミングにと、もう何度も往復した道なので既に地図は頭のなかに入っている。トイレの前を横切り、掲示板の貼られている角を右に曲がって突き当りをまっすぐ左へ歩けば、そこは一番最初に入ってきた関係者用の出入口だ。
+　少しだけ重い鉄製の扉に手を掛け、すっかり暗くなってしまった屋外へ出た次の瞬間。
+「あ、ふ、藤白くん」
+　その場に待ち構えていた人物から声がかかった。振り返るとそこにいたのは校則違反間違いなしの明るいくせっ毛をした少女。
+　希海だった。
+「先輩！？　先に帰ったはずじゃ……？」
+「津雲さんに『今日のことちゃんとフォローしとけ』って言われてさ。ずっと待ってたの」
+　その名前を聞いた瞬間、悪ガキのようにニヤつく津雲の顔が脳裏に浮かんだ。フォロー云々は多分方便で、いらぬお節介を焼いてくれたというのが実際のところなのだろう。だが……。
+「先輩、家どっち？　ど、どうせなら帰りながら話そうぜ」
+　だが今回ばかりはそのお節介に乗っからせてもらおう。そう思う藤白だった。
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
