--- a/metastable3/1-02.html
+++ b/metastable3/1-02.html
@@ -14,23 +14,24 @@
 <div class="contents">
 <div class="text">
 　目覚ましがけたたましい音を立てて鳴り響く。
-　本日五度目のアラーム音。藤白は布団から手を伸ばして、時計の頭部分に付いているスイッチを押した。時計の長針が指し示す時刻は五十六分、もうそろそろ起きないと危ない時間帯だが、いかんせん体が動いてくれない。
+　本日五度目のアラーム音。藤白は布団から手を伸ばして、時計の頭部分に付いているスイッチを押した。時計の長針が指し示す時刻は五十六分。窓からは陽の光がこれでもかとばかりに差し込み、リビングでは母親がバタバタとせわしなく動く音が聞こえる。もうそろそろ起きないと危ない時間帯だが、いかんせん体がうんともすんとも動いてくれなかった。
 「貴和！　いいかげん起きなさい！」
 　扉越しに母親の声がする。わーった、と返事をするものの全身がとてつもなく重い。起きようという意識だけが頭の表層を上滑するばかりで、それもすぐに眠気の波に埋もれていく。
 「ああ、<ruby>紀佳<rp>《</rp><rt>のりか</rt><rp>》</rp></ruby>ちゃん。いつもごめんね。それに病み上がりだっていうのに」
 「私はもう大丈夫なので」
-　扉越しに聞き慣れた少女の声がする。
-　その落ち着いた鈴のような声はまるで夢の中から響いてきているようで、どこか現実感がない。馴染みのある少女が夢にまで出てきたと、そんな風に思ってしまう藤白だった。だが、
+　扉越しに聞き慣れた少女の声。その落ち着いた鈴のような声はまるで夢の中から響いてきているようで、どこか現実感がない。幼なじみがついに夢にまで出てきたと、そんな風に思ってしまう藤白だった。だが、
 　がちゃり、と扉の開く音。
 　次いで誰かがゆさゆさと藤白の体を揺すった。
 「カズくん起きて、学校遅れるよ」
 　――！！
 　夢の中に出てきた少女に肩を触れられ、藤白は針で刺されたように飛び起きた。上半身を起こしてベッドの前に立つ少女をまじまじと凝視する。
 「紀佳……お前……」
+　立っていたのは藤白のよく見知った幼馴染の少女。古江紀佳である。
 「これ着替え。じゃあ私外で待っとくから」
-　人民服を着た少女はそう言い捨てると、長い黒髪をたなびかせて藤白に背を向け、さっさと部屋の外へ出て行ってしまう。藤白はしばらくの間、少女の閉めた扉を呆然と眺めていた。
+　カーキ色の人民服を着た少女はそう言うと、長い黒髪をたなびかせて背を向けさっさと部屋の外へ出て行ってしまう。藤白はしばらくの間、少女の閉めた扉を呆然と眺めていた。
 （…………）
-　再び鳴り始めた目覚まし時計にはっとする。時計を見ればもうそろそろ準備を始めなければ危ない時間帯だ。藤白は目覚まし時計のスヌーズを切るとカーキ色のズボンに足を通し、制服に着替えた。朝食を抜いて顔を洗い、寝ぐせを適当に直して人民帽を浅くかぶる。靴を履いて玄関の外にでると、そこに立っていたのはさきほどの少女。
+　再び鳴り始めた目覚まし時計にはっとする。時計を見ればもうそろそろ準備を始めなければ危ない時間帯。いけない。ぼさっとしていては授業開始初日から遅刻してしまうではないか。
+　藤白は目覚まし時計のスヌーズを切るとカーキ色のズボンに足を通し、制服に着替えた。朝食を抜いて顔を洗い、寝ぐせを適当に直して人民帽を浅くかぶる。靴を履いて玄関の外にでると、そこに立っていたのはさきほどの少女。
 「遅い。早くしないと遅れる」
 　紀佳はそう言ってじとりとした目つきで藤白を睨んでみせる。いつもと変わらなぬ、少しわざとらしいくらい普段通りの仕草だった。
 「紀佳……あのさ俺……」
@@ -39,7 +40,7 @@
 　そんなさやわかな春の空気が満ちるニュータウンを、藤白と紀佳は学校へ向けて歩いて行く。いつもなら紀佳が一方的に好きな漫画の話をしたり、藤白が日常の些細な出来事を報告したりしながら過ぎていくだけの時間も、今日ばかりは少しだけ空気が重い。
 「このペースだと……うん、ぎりぎり間に合いそう」
 　そして信号待ちをしている途中、重い空気を先に破ったのは紀佳だった。
-「新年度二日目からこれだと先が思いやられる。これからはちゃんと早起きしてほしい」
+「授業開始初日からこれだと先が思いやられる。これからはちゃんと早起きしてほしい」
 「……別に来なくても良かったんだぞ」
 　同じく信号待ちをする藤白は、後ろに立つ紀佳を振り返らずにそう告げた。二人の前を『たけのこ幼稚園』の送迎バスがのろのろと横切る。車内で幼稚園児が楽しそうにはしゃいでいるのが見えた。
 「別に毎朝起こしに来てくれなくたって、俺が朝起きれなくて遅刻したって、紀佳が困るわけじゃない。学年の変わり目だし、昔から続けてた日課を止めるいい機会だったんじゃないか？　どうして今日来たんだよ。やめとけばよかったのに」
@@ -52,18 +53,117 @@
 「信号変わった」
 　紀佳は藤白の剣幕などどこ吹く風といった様子で目の前の信号機を指さすと、一人そそくさと横断歩道を渡り始める。
 「ただでさえ時間あぶないのに、悠長にそんな話してる時間ないでしょ。ほら、早く行こう」
-　そして十分ほど歩いた先。緑につつまれ団地と戸建住宅が立ち並ぶニュータウンを抜けたすぐの場所に、二人の通う党立真揺高校は立地している。校門の前に来ると、カーキの人民服を来た男女がどっと増えた。みなこの学校の生徒である。時間が時間だからか、校門を横切る人民服姿の生徒たちは誰も心なしか早足だ。
+　そして十分ほど歩いた先。緑につつまれた団地と戸建住宅が立ち並ぶニュータウンを抜けたすぐの場所に、二人の通う党立真揺高校は立地している。校門の前に来ると、カーキの人民服を来た男女がどっと増えた。みなこの学校の生徒である。時間が時間だからか、校門を横切る人民服姿の生徒たちは誰も心なしか早足だ。
 「じゃあ、私はこっちだから」
 　昇降口の前で紀佳はそう告げると、小さく手を降って自らの靴箱へ向かって歩き出す。彼女は今年から三年、藤白は今年から二年だ。
 　そう紀佳は藤白よりもひとつ年上である。向かいの団地に住んでいて小学生の頃からよく一緒に遊んでいたので時々忘れてしまいそうになるが、紀佳は自分より一足先に卒業してしまうのだ。そんな人間にいつまでも朝起こしに来てもらうわけにはいかないと藤白は思う。
 「俺も……早起きできるようにならないとな」
-　言葉をこぼすと同時に予鈴が鳴った。まずい、そろそろ教室へ向かわねば。そう気を取り直して上履きに履き替えた藤白の目に、一人の人物が飛び込んでくる。負けん気だけは人一倍強そうな目と、校則違反まちがいなしであろう明るい色のくせっ毛。
-　体に電撃が走った。
-　昨日屋上へ通じる階段で出会った女の子、あの踊り場に……異世界へ通じる扉の向こう側で出会った女の子だった。もう二度と会えないような気がしていたが、よくよく考えればそんなことはない。同じ学校に通っているのだ。何かの拍子に再び顔を合わせることは容易に起こり得る。
-　だが女の子と会ったのは昨日の今日だ。まさか出会った翌日にこうしてまた群衆の中から彼女の姿を見つけることができるなんて。藤白は女の子の姿にそんな運命めいた何かを感じてしまい、予鈴がすでに鳴り終わったことも忘れて無心に女の子の後を追いかける。
-　女の子は渡り廊下へは行かずに、そのまま下駄箱のすぐそばの階段へ向かった。一階分、二階分、そして三階分の階段を登り。その少しだけ小さな背中が教室の中に消えて初めて藤白はそのことに気が付く。
-（三年生……だったのか）
-　女の子が入っていった教室には『３－６』という掲示が掲げられている。
+　紀佳の小さな背中を見送り言葉をこぼすと、同時に予鈴が鳴った。まずい、そろそろ教室へ向かわねば。藤白は急いで自らの下駄箱へと向かうと靴を履き替えて教室に向かった。
+「…………」
+　そして数時間。数学の教師がうねった三次関数のグラフを黒板に書き入れるのを藤白はぼさっと眺めている。ガツガツと黒板に数式を書き入れる音も、今の藤白にはどこか上の空。
+　新学期第一日目の授業は案の定、身が入らなかった。現在藤白の頭を満たすのは授業ではなく、つい先日の出来事。
+（精神作業従事者か……）
+　昨日、あの後別室で津雲から聞いた話を思い出す。
+『藤白、お前、ニューロワームって知ってるか？』
+　津雲が開口一番に言ったのは、そんな言葉だった。
+　ニューロワーム。
+　この空間に満ち満ちているオルゴンを媒介とした情報生命体で、人の脳に帰省し、悪さをする病原体だ。そしてニューロワームに感染すると、その患者は眠ったままになってしまう……。藤白が知っているのはそんなところだ。
+『まあ、そんなところだな』
+　津雲の声が頭の中を反響する。
+『昨今、そのニューロワームは軍事利用するための研究が各国で盛んになっているんだ。まずは米国が目をつけて、その後に中国も開発を始めると、火が着いたように世界中で軍事目的の研究が始まった。そしてここ日本でも世界の潮流に乗っかって数年前から研究部門を立ち上げることになったわけだが……その臨床データを提供する場として選ばれたのが、ここ精神医療センターだ。解放軍の制服組である俺が<ruby>病院<rp>《</rp><rt>こんなところ</rt><rp>》</rp></ruby>に居るのもそういう理由だな』
+　――じゃあ彼女は、青山希海は何のためにあの病院に出入りしているんですか？
+　希海は軍人でも医者でもない高校生だ。そんな彼女に、軍事研究なんていう高度なことができるとは思えない。それに対する津雲の答えはこう。
+『そのニューロワームに感染した場合なんだが……ああ、兵器としてのそれじゃなくて、自然にいるヤツだぞ？　自然のニューロワームに感染した場合、一番多く見られる症状が『眠ったままになる』っていうものだ。これは閉律症って呼ばれてるわけだが、この閉律症の治療には少しばかり特殊な資格が必要でな。その資格を持ってる青山はここの病院で治療行為をしつつ、俺たち解放軍に臨床データを提供してくれている、というわけだ』
+　煎茶を片手に得意げな表情で話をする男の表情が藤白の脳裏に蘇る。
+『どうやって治療するんだ？　って顔をしてるな。それはな……脳を“繋ぐ”んだよ。患者の脳と、治療者の脳を』
+　あのときの津雲の顔は十年先でも忘れないだろう。
+　あの男が言うには、その“治療”とは患者の脳と作業者の脳を機械で繋ぎ、直接患者の精神に入り込むことによって行うらしい。
+　そして、この『患者の精神に入り込む』という点が曲者だ。
+　閉律症を発症してしまう直接的な原因はニューロワームによるものだが、そもそも精神状態が健全な人間は通常の免疫力によってニューロワームに感染することはほとんどない。なんらかの原因によって精神の免疫が弱った状態にあってはじめて、ニューロワームに感染してしまうのだ。つまり患者の多くは、現実世界でなんらかの問題を抱えている。そして、その患者の少なくない割合の者が、閉鎖された精神世界から外へ出ることを拒絶する。自らを苛む世界で生きることよりも、心を煩わせることがない、平穏な閉じた世界で生きることを望むのだ。このように元の世界へ帰ることを拒絶した患者をどう治療するのか。答えは簡単。力づくで、無理矢理に連れ戻すのである。
+　――無理矢理って……？
+『言葉のままだ。戦って、閉鎖空間の核を破壊すればいい』
+（…………）
+　ふと窓の外を見ると女子生徒が数人、運動場のトラックを走っている。赤い短パンの体操着に身を包み、面倒くさそうな様子で地面を駆ける生徒たち。その集団の中に、一人、大きく遅れて走っている人影があった。
+（あ……紀佳……）
+　紀佳は顎を上げ肩を大きく上下させながら、見るからに辛そうにトラックを走っている。その顔には汗が浮かび、今にも前のめりに倒れてしまいそうだった。
+（相変わらず運動音痴だなぁ）
+　そんな紀佳の様子を見て藤白の表情に笑みが灯る。
+（でもまあ、元気になってくれて良かったよ）
+　つい一週間ほど前の出来事が藤白の頭をよぎる。白い病院のベッドで眠ったまま、呼びかけてもぴくりとも動かない細身の少女。
+（あいつも、誰かと戦って連れ戻されたのかな……）
+　ニューロワームに感染し、閉律症を患った紀佳のことを思うと、再びあの少女の顔が思い出された。
+（青山希海、ニューロワーム、閉律症、戦って連れ戻す……か。俺にもできるんだろうか……）
+　あの後、藤白は病院でいくつかの検査を受けさせられた。津雲曰く、精神医療従事者としての適性を判断する、だそうだ。検査の結果が基準値より上なら合格。晴れて希海と同じチームに配属させてもらえるらしい。
+「藤白」
+　不合格なら話はなかったことになるが、津雲いわく藤白は『いけそう』とのことだ。何の根拠があってのことかは分からないが、ともかく、この検査を乗り越えられれば、自分はまたひとつ希海に近づくことができる。
+「藤白！！」
+「あっはい！」
+　意識が現実に引き戻された。壇上では眉間に皺を寄せた教師が、藤白を訝しげな表情で睨んでおり、クラス中の視線が藤白に注がれる。
+「お前、この問題解いてみろ」
+「あっ……え、えっと……あの……。すいません、聞いてませんでした」
+「やっぱりな。ちゃんと授業は――」
+　教師が言葉を言い切るより先にチャイムが鳴った。
+「……仕方ないな。じゃあ今日はここまで」
+　そして数学の教師は資料をまとめてさっさと教室を出て行ってしまう。クラス中が喧騒に支配されてもなお、藤白の頭に残った単語は消えない。
+　青山希海、ニューロワーム、閉律症、戦って連れ戻す。
+「はぁ」
+　ホームルームが終わると同時に藤白はため息をついた。そのため息は自らの今後に対する期待と不安の表れだ。
+（またあそこへ行くのか）
+　そうだ。今日の放課後はまたあの病院へ行かねばならない。検査の結果を聞いて、合格ならば軽いオリエンテーションを受ける予定になっている。
+　よし、とつぶやいて自分を鼓舞し、学校指定のメッセンジャーバッグを肩に担いだ。こうなったらとことんまでやってやろう。どこまで行けるか分からないし、どうなるのかも分からないが、少しでもあの子に近づくためだと藤白は思う。
+　そして藤白は教室を出た。生徒たちが思い思いの立ち話に花を咲かせる廊下を突っ切り、薄暗い階段を降りようとしたところで、
+「あっ……」
+　立ち止まった。
+　見覚えのある後ろ姿、校則違反間違いなしの明るいくせっ毛をした女の子が、階段を登ろうとしていたのだ。
+（青山……さん？）
+　彼女とは病院でしか会えないような気がしていたが、よくよく考えればそんなことはない。同じ学校に通っているのだ。何かの拍子に再び顔を合わせることは容易に起こり得る。
+（声でも……掛けた方がいいのかな）
+　そう思って藤白は希海の背中を追う。昨日後を付けた時と何一つ変わらぬ背中は階段を一つ上り、廊下を少し歩いたところにある扉に入っていった。
+（えっ……？　年上……だったのか）
+　希海が入っていた部屋には『３－６』という掲示が掲げられている。後ろのドアから中を覗き見れば、教室の中はまだホームルームの最中であった。静かに椅子に座り、担任教師の話を聞く生徒たち。教室中から『早く終われ』というムードが漂っている。そしてそんな生徒たちの中に、見知った後ろ姿があった。
+（げっ……そういえば紀佳もこのクラスだった）
+　最後尾の席に座った紀佳はボケっとした顔で担任の話に耳を傾けている。だがこの小さな窓からはどんな角度で覗いてみても、希海の姿は見当たらない。ここからは死角になっている前の方の席なのだろうか。
+　そんなことを考えているうちにホームルームが終わり、教室内がにわかに活気づきはじめた。藤白は教室のなかを覗きこむのをやめ、腕を組んでさも誰かを待っているそぶりをする。担任と思しき教師が部屋から出てくると、ついで雪崩をうったかのように教室からぞろぞろと生徒が出てきた。その一団に探し求めている人物の背中がないか、藤白はしばらく目を凝らして探してみた。途中紀佳が出てきたときは慌てて後ろを向いたが、それ以外はずっと注意を切らさない。
+　だがいくら待ってみても希海はなかなか姿を現さなかった。
+（後ろ向いてる間に出て行ってしまったのか……？）
+　そんな不安が頭をよぎるが、仮にそうだとしたらもう手遅れだ。だが過ぎてしまったことを今更悔いても仕方がなく、今は希海がまだ教室内に残っている可能性にすがるしかない。
+（ていうかもういっそのこと……）
+　自分から教室に入ってしまおうか。
+　脳裏にそんな考えが浮かぶが、よその教室に入るのはなんだか抵抗があり、ましてやあまり親しくもない相手を訪ねるのは非常に気が重い。
+　だが幸いにも今日は新学年がスタートしてまだ二日目だ。教室に慣れていないのはそこの住人も同じことであって、まだクラスの面々も覚えきれていない人だって多いだろう。そこに知らない顔が一つ増えたところで、さして怪しまれることはない。
+　そう考え、藤白は『よし』と一つ決意をして中に入ってみることにした。少し緊張した面持ちでドアに手を掛け、がらりと戸を引いて中へ入る。教室内に居たのはホウキを片手にじゃれあう男子生徒や机に腰掛けて談笑する女子生徒。そしてそれらノイズのような人混みの向こう側に――
+（……いた！）
+　希海は、窓際の一番前の席に座っていた。後ろからで顔はよく見えないが、あのふわりとした明るい髪色は、間違いなく彼女のそれである。
+「おう藤白、何してんだ？」
+　突然、背後から声。振り返るとそこには見知った男子生徒の顔があった。
+「さ、佐竹先輩……？」
+　そこに居たのは少しひょろっとした短髪の男子生徒。去年文化祭の委員で一緒になって以来懇意にしてもらっている上級生だった。
+「珍しいな、お前がこっち来るなんて。紀佳ちゃんならもう帰ったぞ？」
+「い、いや、今日は紀佳じゃなくて……」
+　藤白はそう言葉を濁すと、視線を希海の方へやる。
+「あ、あの一番前の席に座ってる子に用事が……」
+「はぁ？　一番前の席っていうと……」
+　佐竹はそこまで言うと、突然がばっと藤白の肩に手を回し、そのまま廊下まで引っ張っていった。
+「おっなになに？　お前、あいつのこと気になってるわけ？」
+「ちょ、ちょっと苦しいですって！　離してください！」
+「まあまあ、いいじゃねえか。男同士の大切な話だ。周りに聞かれちゃまずいだろ」
+　別にやましい話をしているわけでは無いのだから構わないだろうと藤白は思う。というかこんな風に騒いでいる方が周りの注目を集めてしまうのでやめてほしかった。
+「んで、お前はあいつの何が知りたいんだ？」
+　連れて行かれた廊下。佐竹は藤白の肩に腕を回したままの姿勢で、心底嬉しそうな表情で質問を投げかける。
+「ていうか先輩、あの人のこと知ってるんですか？　まだクラス分けされて二日目ですよ」
+「あああいつ……。青山さんとは高一の頃に同じクラスだったからな。てかお前、紀佳ちゃんがいるのにこれ以上新しい子にちょっかい掛けようとは一体どういう了見だ？　答えによっちゃ許さんぞ」
+　そう言って頭を小突いてくる佐竹。藤白は肩に回された腕ごと強引にそれを撥ねのけ、
+「ち、違いますって！　そういうのじゃないですから！　なんというか……ただ単純にちょっと気になるんですよ」
+「お前なあ……その『ちょっと気になる』が世間でなんて呼ばれてるのか知らんのか」
+　佐竹ははぁと大きくため息をつくと、少しだけ真面目な顔をして藤白に向き直り、
+「まあでも……一応忠告しておくと青山さんはあんまりおすすめしないぞ」
+「な、なんでですか」
+「あいつ男いるから」
+　どくりと、少しだけ心臓が音をたてる。
+「あいつ今でこそあんな明るい色に髪染めてるけどな、昔はもっと暗くてどよんとした雰囲気だったんだぜ？　高一の頃に男と一緒になって下校してるの目撃されてるし、まあ向こうの好みに合わせてイメチェンしたってとこだろ」
+「…………」
+「まあ、そんなわけでだな。悪いことは言わん。諦めろ。略奪愛を良しとするなら話は別だけどな」
+「本当に……そんなんじゃないですから」
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
