誤字脱字の修正

--- a/metastable3/1-01.html
+++ b/metastable3/1-01.html
@@ -39,7 +39,7 @@
 　固まった。
 　扉を抜けた先、物々しい鉄格子に囲まれた屋上へと続く階段のその踊場に、女の子が座っていたのだ。服装は藤白と同じカーキ色の人民服――この学校の生徒だ。左の腕に巻かれた腕章は夕焼けのオレンジに染め上げられて一層その赤を深くしており、校則違反まちがいなしであろう明るい色のくせっ毛が春風にさらわれてふわりと揺れた。
 「あ……」
- 藤白の登場を全く予見していなかったのだろう。女の子は階段の赤茶けたステップに腰を降ろしたままの姿勢で、固まってしまう。藤白も同じだ。
+　藤白の登場を全く予見していなかったのだろう。女の子は階段の赤茶けたステップに腰を降ろしたままの姿勢で、固まってしまう。藤白も同じだ。
 　しばらくの間、二人は互いに見つめ合ったまま何も言わなかった。とはいっても実のところほんの一秒かそこらでしかない。だが、このときの藤白にはその一秒が何倍にも引き伸ばされてしまったように感じられてならなかったのだ。自分以外に誰も来ないと思い込んでいた場所、日常と非日常の交わる汽水域に居た予期せぬ少女。その存在がまるでこの世ならざる世界への先導役か何かに見えてしまい、藤白の胸が大きく音を立てる。呼吸が不規則になり息ができない。まるで肋骨の内側を撫で回されているような、心臓が暴れ出すような、そんな感覚。
 「え、えっと……」
 　そんな苦しさから逃げるように、藤白は肺の奥から声を絞り出した。人付き合いは苦手ではなかったし、見ず知らずの人でもそこそこ話せるタイプだと思う。だがこの時ばかりは頭が真っ白になっていて、続く言葉が出てこない。
@@ -73,7 +73,7 @@
 　女の子がある施設の前で足を止め、唐突に周りを見渡した。藤白はその視線に思わずびくりとし、持っていた人民帽を思わず後ろ手に隠す。
 （なっ、なんで帽子を隠すんだ俺は……！）
 　だが女の子にとって藤白は単なる風景の一部だったのだろう。その目線は藤白と交わることもなく、女の子は気を取り直したように施設の敷地内へと姿を消した。藤白は慌てて女の子の後を追い、施設の正面へと向き直る。
-　その施設は清潔感の真っ白な外壁が印象的な七階建ての建造物だった。ゲートの前には警備員が常駐し、玄関前のロータリーには多数の車が停まっている。
+　その施設は清潔感のある真っ白な外壁が印象的な七階建ての建造物だった。ゲートの前には警備員が常駐し、玄関前のロータリーには多数の車が停まっている。
 （え……、こ、ここって……？）
 　そして屋上には大きく掲げられた「<span class="simplified">党立精神医疗</span>センター」の文字。
 「精神……病院……？」
