--- a/metastable3/1-02.html
+++ b/metastable3/1-02.html
@@ -67,7 +67,7 @@
 『藤白、お前、ニューロワームって知ってるか？』
 　津雲が開口一番に言ったのは、そんな言葉だった。
 　ニューロワーム。
-　この空間に満ち満ちているオルゴンを媒介とした情報生命体で、人の脳に帰省し、悪さをする病原体だ。そしてニューロワームに感染すると、その患者は眠ったままになってしまう……。藤白が知っているのはそんなところだ。
+　この空間に満ち満ちているオルゴンを媒介とした情報生命体で、人の脳に寄生し、悪さをする病原体だ。そしてニューロワームに感染すると、その患者は眠ったままになってしまう……。藤白が知っているのはそんなところだ。
 『まあ、そんなところだな』
 　津雲の声が頭の中を反響する。
 『昨今、そのニューロワームは軍事利用するための研究が各国で盛んになっているんだ。まずは米国が目をつけて、その後に中国も開発を始めると、火が着いたように世界中で軍事目的の研究が始まった。そしてここ日本でも世界の潮流に乗っかって数年前から研究部門を立ち上げることになったわけだが……その臨床データを提供する場として選ばれたのが、ここ精神医療センターだ。解放軍の制服組である俺が<ruby>病院<rp>《</rp><rt>こんなところ</rt><rp>》</rp></ruby>に居るのもそういう理由だな』
