--- a/metastable3/1-03.html
+++ b/metastable3/1-03.html
@@ -30,7 +30,7 @@
 「血中バイオン濃度も、オルゴン侵度も、<ruby>虚 想 受 容 性<rp>《</rp><rt>ネガティブ・ケイパビリティ</rt><rp>》</rp></ruby>も、合格基準を超えている。随分とギリギリだが、それ以外は特に問題は見当たらないし、大丈夫だろう」 
 「じゃあ、これで晴れて――」
 「正式な認可はまた後日だがな。まあでも普段の素行によほど問題があるとか、血縁者にテロリストや外国人がいるってことでもない限りは大丈夫さ。あとは二、三の講習を受ければ第三種精神医療従事者の資格が降りるし、ここでの活動も許される」
-　資格、と言われると少し嬉しい。就職や大学受験に役立つのかはよく分からないが、自分の脳力が目に見える形で評価されたことになるのだから。
+　資格、と言われると少し嬉しい。就職や大学受験に役立つのかはよく分からないが、自分の能力が目に見える形で評価されたことになるのだから。
 「まっ、お前はなんとなくスジが良さそうだったからな」
 「スジ……？　そんなちょっと会っただけで何か分かるんですか？」
 「ああ、精神医療従事者の能力は……とりわけオルゴン侵度と<ruby>虚 想 受 容 性<rp>《</rp><rt>ネガティブ・ケイパビリティ</rt><rp>》</rp></ruby>はな、お前みたいな青臭いガキの方が高いって相場が決まってんだよ」
@@ -62,7 +62,7 @@
 「いや、前に言ってただろ<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミングの話。アレの人材が内定したんだ。正式な認可はまだ先なんだが早めに紹介しておこうと思ってな。ほら、お前ら入れ」
 　津雲に急かされ、まず紀佳が部屋に入り、それに藤白が続いた。六畳くらいの大きさの部屋には机とソファが置かれており、壁に設けられた本棚には何やら難しそうな本が並んでいる。
 　そして少し緊張したような面持ちで部屋の中央に立つ希海。あの時、屋上に通じる階段の踊り場で出会った、あの少女がそこに居た。
-「あれ？　あなた確か……」
+「あれ？　あんた確か……」
 　希海は少し混乱したような様子で藤白と紀佳を交互に見つめる。無理もない。片方はさっきまで同じ教室で授業を受けていた人物で、もう片方も前日に見た顔だったからなのだろう。
 「おう。そういや青山と古江は面識があったな。まあでもせっかくだし改めて自己紹介でもするといい、ほらじゃあまず青山から」
 「な、なんで私からなんですか」
@@ -229,7 +229,7 @@
 「も……もう無理。まいった」
 　そして藤白は音を上げてその場に倒れこんだ。
 「よろしい」
-　希海はその様子を見て満足したかのように、うん、とうなずいてみせる。あ、この人結構サドっ毛あるな、と藤白は思った。
+　希海はその様子を見て満足したかのように、うん、とうなずいてみせる。あ、この人結構サドっ気あるな、と藤白は思った。
 　真っ白な地面に横たわり、ただ無心に上空を眺める。そこにはグリッドの引かれた真っ白な天井がどこまでも続いていて、しばし凝視しているとどちらが地面でどちらが天井なのかがだんだん分からなくなってくる。
 「先輩は……いつもこんなことやってんのか」
 「まあね。中には素直に出てきてくれる患者もいるけど、十中八九何かしらの争いになるかな。じゃあ次は……」
