文言の修正

--- a/metastable3/1-02.html
+++ b/metastable3/1-02.html
@@ -26,7 +26,7 @@
 　――！！
 　夢の中に出てきた少女に肩を触れられ、藤白は針で刺されたように飛び起きた。上半身を起こしてベッドの前に立つ少女をまじまじと凝視する。
 「紀佳……お前……」
-　立っていたのは藤白のよく見知った幼馴染の少女。古江紀佳である。
+　立っていたのは背の低い痩身の少女。幼馴染の古江紀佳である。
 「これ着替え。じゃあ私外で待っとくから」
 　カーキ色の人民服を着た少女はそう言うと、長い黒髪をたなびかせて背を向けさっさと部屋の外へ出て行ってしまう。藤白はしばらくの間、少女の閉めた扉を呆然と眺めていた。
 （…………）
