--- a/metastable3/1-04.html
+++ b/metastable3/1-04.html
@@ -38,7 +38,7 @@
 「この四重極ルーミングっていうのは？」
 「おう、まさにそれだ。従来のルーミングは<ruby>双極<rp>《</rp><rt>ダイポール</rt><rp>》</rp></ruby>型……つまり一人の患者と一人の作業者を繋いで治療する形式で行われていたわけだ。何でかっていうと、これが一番安定してるから。つまり患者と作業者合わせて二人になる場合が一番簡単にできるんだよ。だが患者と作業者の数が合わせて三人以上になると途端に不安定になってしまって上手いこと精神を接続できないことが実験的にも理論的にも示されていたわけだ」
 　話が途端に難しくなってしまって藤白は目を白黒させる。津雲はそんな藤白に少し呆れたようにため息をつくと
-「おいおいこれくらいはさっと理解して欲しいぞ？　つまりだなあ、今までは患者一人に対して作業者一人じゃないと上手くいかなかったんだよ。ところが最近、実験的にその例外が発見された。それが<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミング。つまり患者と作業者が合わせて四人の場合だと、不思議とこれが安定するらしい。いや厳密には安定じゃなくて<ruby>準安定数４<rp>《</rp><rt>メタステーブル・フォー</rt><rp>》</rp></ruby>なんて名前で呼ぶらしいが、俺も専門家じゃないから詳しくは知らん」
+「おいおいこれくらいはさっと理解して欲しいぞ？　つまりだなあ、今までは患者一人に対して作業者一人じゃないと上手くいかなかったんだよ。ところが最近、実験的にその例外が発見された。それが<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミング。人数が合わせて四人、つまり作業者が三人の場合だと、不思議とこれが安定するらしい。いや厳密には安定じゃなくて<ruby>準安定数３<rp>《</rp><rt>メタステーブル・スリー</rt><rp>》</rp></ruby>なんて名前で呼ぶらしいが、俺も専門家じゃないから詳しくは知らん」
 「えっと、つまり……？」
 「つまりお前や古江をスカウトしたのはそういう理由なわけだ。今まで青山一人でやってて……、まあ昔は相方みたいなのも居たんだけどな。そいつが大学生になってやめちまって、青山一人になってたんだが……ってこの話はいいか。とにかく、これからは青山とあと二人でチームを組んでルーミングに当ってもらうことになった。お前や古江が新たに連れて来られたのはそのためだな」
 「ち、チームですか……」
