福岡文フリの情報追加

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
   </table>
 
   <div class="information" style="display:;">
-    <div style="font-weight:bold;"><a href="http://bunfree.net/?osaka_bun03" target="_blank">第三回大阪文フリ</a>に参加します(<a href="https://c.bunfree.net/c/osaka03/!/C/22" target="_blank">C-22</a>)</div>
-    『<a href="hardproblem/">ふたりのハードプロブレム</a>』書籍版を販売します。<br>
-    絵は<a href="http://www.pixiv.net/member.php?id=10662" target="_blank">れーちぇさん</a>に描いていただくことになりました！お楽しみに。<br>
-    カタログは<a href="https://c.bunfree.net/c/osaka03" target="_blank">コチラ</a>。
+    <div style="font-weight:bold;">10/25(日)　<a href="http://bunfree.net/?fukuoka_bun01" target="_blank">第一回文学フリマ福岡</a>に出展します(<a href="https://c.bunfree.net/c/fukuoka01/!/%E3%81%82/29" target="_blank">あ-29・30</a>)</div>
+    当日は『<a href="hardproblem/">ふたりのハードプロブレム</a>』書籍版と<br>
+    アンソロジー『みんなのハードプロブレム』を<br>
+    販売しますのでどうぞよろしくお願いします。<br>
+    カタログは<a href="https://c.bunfree.net/c/fukuoka01" target="_blank">コチラ</a>。
   </div>
   
 </body>
